--- a/yarogono/Java/1.JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가.md
+++ b/yarogono/Java/1.JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가.md
@@ -1,12 +1,12 @@
 ## 목차
 1. [참고자료](#🔗-참고자료)
-2. [JVM이란 무엇인가](#-JVM이란 무엇인가)
-3. [컴파일 하는 방법](#-컴파일하는 방법)
-4. [실행하는 방법](#-실행하는 방법)
-5. [바이트코드란 무엇인가](#-바이트코드란 무엇인가)
-6. [JIT 컴파일러란 무엇이며 어떻게 동작하는지](#-JIT 컴파일러란 무엇이며 어떻게 동작하는지)
-7. [JVM 구성 요소](#-JVM 구성 요소)
-8. [JDK와 JRE의 차이](#-JDK와 JRE의 차이) 
+2. [JVM이란 무엇인가](#-JVM이란-무엇인가)
+3. [컴파일 하는 방법](#-컴파일하는-방법)
+4. [실행하는 방법](#-실행하는-방법)
+5. [바이트코드란 무엇인가](#-바이트코드란-무엇인가)
+6. [JIT 컴파일러란 무엇이며 어떻게 동작하는지](#-JIT-컴파일러란-무엇이며-어떻게-동작하는지)
+7. [JVM 구성 요소](#-JVM-구성-요소)
+8. [JDK와 JRE의 차이](#-JDK와-JRE의-차이) 
    
 # 🔗 참고자료
 
