feat: 프로그래밍 언어

--- a/pengooseDev/JS_Deep_Dive/01. 프로그래밍/01. 프로그래밍이란.md
+++ b/pengooseDev/JS_Deep_Dive/01. 프로그래밍/01. 프로그래밍이란.md
@@ -2,8 +2,8 @@
 
 ## 프로그래밍
 
-현실의 `문제를 해결하기 위한 도구`이다.
-또한, `컴퓨터와의 커뮤니케이션`이다.
+현실의 `문제를 해결`하기 위해 `컴퓨터에게 명령`을 내리는 코드를 작성하는 행위이다.
+즉, `컴퓨터와의 커뮤니케이션`이다.
 문제를 해결하기 위해선 `문제를 인지`하고, 이에 대한 해결 방안을 모색해야한다.
 
 ---
