feat: 공부한 것들느낀점 적기 / JVM 공부내용 정리 중

--- a/yarogono/F-lab/Java/0이 들어있는 변수에 10개의 스레드가 동시에 접근해서 ++ 연산을 하면 우리 예상과 다르게 10이 나오지 않습니다. 왜 그럴까요.md
+++ b/yarogono/F-lab/Java/0이 들어있는 변수에 10개의 스레드가 동시에 접근해서 ++ 연산을 하면 우리 예상과 다르게 10이 나오지 않습니다. 왜 그럴까요.md
@@ -17,3 +17,14 @@
 ### ❓ Thread Safe란?
 
 - 여러 스레드가 작동하는 환경에서도 문제 없이 동작하는 것을 Thread Safe하다고 말 할 수 있다.
+
+## 공부하면서 느낀 점
+
+나는 과연 문제 상황이 다가왔을 때, 그것에 대한 고민을 제대로 해봤을까?  
+위 논의 내용에 대한 이유를 너무 대강 생각하고 넘어간 것 갔던 것 같습니다.  
+그러면 내가 마주쳤던 이슈들도 위와 같이 그냥 넘어간 것이 분명히 많았을 것입니다.
+회사로 인한 물경력의 문제보다 내 태도에서 문제가 정말 많았다는 것을 느꼈습니다.
+위와 같은 문제는 아니지만, 전 회사에서 OOM(Out OF Memory) 에러를 대충 해결하고 지나간 것이 떠올랐습니다.
+그 주제를 바탕으로 조금이라도 고민하고 공부 했었다면 JVM, Heap space 등 큰 공부가 되었을 것입니다.
+우선 태도부터 바꿔야 한다고 뼈저리게 느꼈습니다.  
+그러기 위해 우선 끊임없이 고민하는 습관을 형성 할 예정입니다.  
