--- a/yarogono/F-lab/Java/스레드는 왜 써야 할까요.md
+++ b/yarogono/F-lab/Java/스레드는 왜 써야 할까요.md
@@ -5,7 +5,7 @@
 
 # 내용
 
-![다운로드.jpg](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/766bac2c-f70d-4d96-a182-021b8204f334/%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%93%9C.jpg)
+![다운로드.jpg](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/766bac2c-f70d-4d96-a182-021b8204f334/%EB%8B%A4%EC%9A%B4%EB%A1%9C%EB%93%9C.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230117%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230117T012921Z&X-Amz-Expires=86400&X-Amz-Signature=53250048391f77a0753c6edb8ccffe38e7d65091c138f306aba744baafdc47bb&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EB%258B%25A4%25EC%259A%25B4%25EB%25A1%259C%25EB%2593%259C.jpg%22&x-id=GetObject)
 
 ### ❓ 스레드(Thread)란?
 
@@ -14,13 +14,13 @@
 - 프로세스는 서로 정보를 주고 받을 수 없지만,
   스레드는 서로 정보를 주고 받을 수 있다.
 - 스레드들은 각각의 Stack 영역을 가지고 있고 Code, Data, Heap 영역을 공유한다.
-    - 스택 안에는 지역변수, 리턴 주소, 값 파라미터, 리턴 값이 들어가며 이것은 스레드가 가지고 있다.
-    - 힙 안에는 동적으로 할당되는 배열이나 객체가 들어가며 이를 공유하기에 한 스레드가 프로세스 자원을 변경하면 다른 이웃 스레드도 변경 사실을 즉시 알 수 있다.
+  - 스택 안에는 지역변수, 리턴 주소, 값 파라미터, 리턴 값이 들어가며 이것은 스레드가 가지고 있다.
+  - 힙 안에는 동적으로 할당되는 배열이나 객체가 들어가며 이를 공유하기에 한 스레드가 프로세스 자원을 변경하면 다른 이웃 스레드도 변경 사실을 즉시 알 수 있다.
 
 ### ❓ 스레드(Thread)를 사용하는 이유는?
 
 - 멀티 스레드를 통해 하나의 프로세스를 다수의 실행 단위로 구분하여 자원을 공유하고 자원 생성과 관리의 중복성을 최소화하여 수행 능력을 향상시키기 위해서이다.
-    - 즉 하나의 프로그램에서 여러 일들을 병렬로 처리하기 위함이다.
+  - 즉 하나의 프로그램에서 여러 일들을 병렬로 처리하기 위함이다.
 - 멀티 프로세스로 실행되는 작업을 멀티 스레드로 실행하게 되면 프로세스를 생성하여 자원을 할당하는 과정도 줄어들 뿐더러 프로세스를 컨텍스트 스위칭 하는 것보다 오버헤드를 더 줄일 수 있게 된다.
 
 **❓ 컨텍스트 스위칭(Context Switching)이란?**
@@ -32,3 +32,13 @@
 - Task의 대부분 정보는 Register에 저장되고 PCB(Process Control Block)로 관리되고 있습니다.
 - 현재 실행하고 있는 Task의 PCB 정보를 저장하게 됩니다.(Process Stack, Ready Queue)
 - 다음 실행할 Task의 PCB 정보를 읽어 Register에 적재하고 CPU가 이전에 진행했던 과정을 연속적으로 수행 할 수 있습니다.
+
+## 공부하면서 느낀 점
+
+스레드에 대한 막연한 두려움이 있었습니다.  
+아직 내가 배워야 할 레벨은 아니라고 나만의 벽을 만들었던 것 같습니다.  
+시도에 대한 두려움이 있더라도 공부를 하는 것은 문제 없는데도 말입니다.  
+우선 시작하고 천천히 고쳐나가면서 다듬어야 한다고 느꼈습니다.  
+(너무 크게 생각하지 말고 작은 것부터 시작)  
+막상 공부를 해보니 얻는 것이 엄청 많았습니다.  
+우선 고민하지 말고 내가 궁금한 것이 있으면 꼭 찾아보고 공부해보자!
