--- a/yarogono/Java/1.JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가.md
+++ b/yarogono/Java/1.JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가.md
@@ -1,27 +1,102 @@
-## 목차
-1. [참고자료](#🔗-참고자료)
-2. [JVM이란 무엇인가](#jvm이란-무엇인가)
-3. [컴파일 하는 방법](#컴파일-하는-방법)
-4. [실행하는 방법](#실행하는-방법)
-5. [바이트코드란 무엇인가](#바이트코드란-무엇인가)
-6. [JIT 컴파일러란 무엇이며 어떻게 동작하는지](#jit-컴파일러란-무엇이며-어떻게-동작하는지)
-7. [JVM 구성 요소](#jvm-구성-요소)
-8. [JDK와 JRE의 차이](#jdk와-jre의-차이) 
-   
-# 🔗 참고자료
+# **🔗 참고자료**
 
--
+- [위키백과(자바 가상 머신)](https://ko.wikipedia.org/wiki/%EC%9E%90%EB%B0%94_%EA%B0%80%EC%83%81_%EB%A8%B8%EC%8B%A0)
+- Naver D2-JVM Internal ⇒ **[링크](https://d2.naver.com/helloworld/1230)**
+- Oracle - VM(가상 머신)이란 무엇입니까? ⇒ [**링크**](https://www.oracle.com/kr/cloud/compute/virtual-machines/what-is-virtual-machine/)
+- The Java Virtual Machine ⇒ [**링크**](https://www.artima.com/insidejvm/ed2/jvm.html)
+- Dzone - The JVM Architecture Explained ⇒ [**링크**](https://dzone.com/articles/jvm-architecture-explained)
+- Difference between Byte Code and Machine Code ⇒ [**링크**](https://www.geeksforgeeks.org/difference-between-byte-code-and-machine-code/)
+- IF(kakao) - JVM warm up ⇒ [**링크**](https://www.youtube.com/watch?v=CQi3SS2YspY&t=180s&ab_channel=kakaotech)
 
 # JVM이란 무엇인가
 
+### ❓ JVM 왜 공부해야 할까?
+
+- 첫 회사에 취업하기 전에는 단순히 면접을 대비하기 위해 공부했었습니다.
+  그런데 어떤 주제에 대해 깊게 공부하면 할수록 JVM의 개념을 알아야 이해가 편하다는 것을 알았습니다.
+  어떤 주제는 JVM의 개념을 모르면 이해가 거의 안되는 주제도 있었습니다.(ex. Reflection)
+  JVM을 전부 이해한다는 것은 힘들겠지만 생각과 의문을 통해 계속 깊게 파고 공부할 예정입니다.
+- JVM이 동작하는 원리가 Java의 특징을 정의하고, 그 특징들이 현대 프로그래밍 언어들에 큰 영향을 주었기 때문입니다.
+
+### ❓ JVM이란?
+
+- Java Virtual Machine의 약자
+- 프로그램을 실행하기 위해 물리적 머신(즉, 컴퓨터)와 유사한 머신을 소프트웨어로 구현한 것을 말한다고 할 수 있다.
+    - VM(가상 머신)이란
+        - 물리적 컴퓨터에서 실행하는 모든 소프트웨어를 실행하는 데 사용할 수 있는 “**소프트웨어 컴퓨터**”
+        - 물리적 기계와 마찬가지로 가상 머신에는 자체 운영 체제(Windows, Linux 등), 스토리지, 네트워킹, 구성 설정 및 소프트웨어가 포함되어 있으며 해당 호스트에서 실행되는 다른 VM과 완전히 분리된다.
+    - 가상 머신을 사용하는 이유
+        - 가상화는 여러 작은 워크로드를 하나의 물리적 컴퓨터로 통합하여 효율성을 높이고 IT 비용을 절감합니다.
+
+### ❓ JVM 사용하는 이유는?
+
+- 플랫폼(OS) 독립적으로 구동 및 개발을 할 수 있습니다.
+    - 자바의 WORA(Write Once Run Anywhere) 컨셉이 이에 해당된다.
+    - 구동 되는 환경에 구애 받지 않고 실행될 수 있도록 하고 다양한 환경 간 호환성을 유지합니다.
+      즉 Java로 작성된 프로그램은 플랫폼에 맞는 JVM만 설치되어 있으면 OS에 영향을 받지 않고 동작이 가능합니다.
+- GC(Garbage Collection)가 메모리를 관리해줍니다.
+  - 
+
+### ❓ JVM이 플랫폼(OS)에 독립적으로 구동이 가능한 이유는?
+
+### ❓ JVM이 플랫폼(OS)에 독립적으로 구동하도록 만든 이유는?
+
 # 컴파일 하는 방법
+
+### ❓ 컴파일러란?
 
 # 실행하는 방법
 
 # 바이트코드란 무엇인가
 
+### ❓ 자바 바이트 코드(Java byte code)란?
+
+- 특정 하드웨어가 아닌 가상 컴퓨터에서 돌아가는 실행 프로그램을 위한 이진 표현법
+- 하드웨어가 아닌 소프트웨어에 의해 처리되기 때문에, 보통 기계어보다 더 추상적이다.
+- 자바 가상 머신(JVM)이 이해할 수 있는 언어로 변환된 자바 소스 코드를 의미한다.
+- 자바 컴파일러에 의해 변환되는 코드의 명령어 크기가 1바이트라서 자바 바이트 코드라고 불리고 있다.
+
+### ❓ 바이트 코드(Byte Code)와 기계어(Machine Code)의 차이는?
+
+-
+
 # JIT 컴파일러란 무엇이며 어떻게 동작하는지
+
+### ❓ JIT 컴파일러란?
+
+- Just Int Time의 약자로 적시에 기계어를 만든는 의미다.
+- JIT(Just In Time) 컴파일러는 런타임 시 바이트 코드를 원시 시스템 코드로 컴파일하여 Java 애플리케이션의 성능을 향상시키는 런타임 환경의 컴포넌트입니다.
+
+### ❓ JIT 컴파일러는 어떻게 동작할까?
+
+### ❓ JIT 컴파일러를 사용하는 이유는?
 
 # JVM 구성 요소
 
+![JVM-Architecture.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/73b8dfea-ff7b-42e6-aca3-b9ecce81c871/JVM-Architecture.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230117%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230117T012549Z&X-Amz-Expires=86400&X-Amz-Signature=8206e4f116268c3433368fcbfb74f94865e0f82f7a8149978fb24810007903c9&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22JVM-Architecture.png%22&x-id=GetObject)
+
+### ❓ JVM의 구성요소는?
+
+위 사진을 보면 알 수 있듯이 JVM은 3가지 메인 하위 시스템(Subsystem)으로 나뉘어져 있다.
+
+1. 클래스 로더(Class Loader)
+2. 런타임 데이터 영역(Runtime Data Area)
+3. 실행 엔진(Execution Engine)
+
+### 1️⃣ 클래스 로더(Class Loader)
+
+### 2️⃣ 런타임 데이터 영역(Runtime Data Area)
+
+### 3️⃣ 실행 엔진(Execution Engine)
+
 # JDK와 JRE의 차이
+
+![JDK.jpg](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/33bd6a23-8497-4a06-aa02-0234c7eb96dd/JDK.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230117%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230117T012520Z&X-Amz-Expires=86400&X-Amz-Signature=794f02df33fc83d705ed55fdfa78c3142ccf1c1b5809953be615aea11a3dde01&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22JDK.jpg%22&x-id=GetObject)
+
+### ❓ JDK란?
+
+- Java Development Kit의 약자
+
+### ❓ JRE란?
+
+- Java Runtime Environment의 약자
