--- a/yarogono/Java/1.JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가.md
+++ b/yarogono/Java/1.JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가.md
@@ -11,6 +11,7 @@
 - 자바 JIT 컴파일러 ⇒ [**링크**](https://velog.io/@youngerjesus/%EC%9E%90%EB%B0%94-JIT-%EC%BB%B4%ED%8C%8C%EC%9D%BC%EB%9F%AC)
 - Java(Compiler, Interpreter, JIT) 유튜브 영상 ⇒ [**링크**](https://youtu.be/8y0L9QT7U74)
 - JVM의 클래스 로더란? ⇒ [**링크**](https://steady-coding.tistory.com/593)
+- JIT Compiler ⇒ [**링크**](https://inspirit941.tistory.com/352)
 
 # JVM이란 무엇인가
 
@@ -69,19 +70,19 @@
 
 ### cmd창에서 echo 명령어를 통해 자바(.java) 파일을 생성한다.
 
-![캡처.JPG](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/f221ed62-c6cf-4628-af66-4de9286fb7bb/%EC%BA%A1%EC%B2%98.jpg)
+![캡처.JPG](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/f221ed62-c6cf-4628-af66-4de9286fb7bb/%EC%BA%A1%EC%B2%98.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144508Z&X-Amz-Expires=86400&X-Amz-Signature=48f22e7b2afc1fa708472fd46c91c522b3bbacf21fad073372de12034b00a396&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EC%25BA%25A1%25EC%25B2%2598.JPG.jpg%22&x-id=GetObject)
 
 ### **생성된 파일에  “Hello World”를 출력하는 코드를 작성한다.**
 
-![캡처.JPG](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/74e5632d-2515-49d9-98f1-19f9547cb576/%EC%BA%A1%EC%B2%98.jpg)
+![캡처.JPG](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/74e5632d-2515-49d9-98f1-19f9547cb576/%EC%BA%A1%EC%B2%98.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144520Z&X-Amz-Expires=86400&X-Amz-Signature=9cbb5ac0e2d863f47a5a9009f32d5cf32f0dac90cde863ec67881b41c12bb5e7&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EC%25BA%25A1%25EC%25B2%2598.JPG.jpg%22&x-id=GetObject)
 
 ### **cmd창에서 javac 명령어를 활용해 자바(.java) 파일 컴파일 하기**
 
-![캡처.JPG](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/78fc55a9-dbe4-421b-b0c0-a17677f88e9e/%EC%BA%A1%EC%B2%98.jpg)
+![캡처.JPG](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/78fc55a9-dbe4-421b-b0c0-a17677f88e9e/%EC%BA%A1%EC%B2%98.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144536Z&X-Amz-Expires=86400&X-Amz-Signature=3d908ca48c67110864ace4e19766e3218eb72d8abb6e23b6bccc2c92a4b1b8c2&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EC%25BA%25A1%25EC%25B2%2598.JPG.jpg%22&x-id=GetObject)
 
 ### java 명령어를 통해 컴파일된 클래스(.class) 파일을 실행해본다.
 
-![캡처.JPG](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/a61b9411-712b-4c60-a7ca-1fd2db3f7828/%EC%BA%A1%EC%B2%98.jpg)
+![캡처.JPG](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/a61b9411-712b-4c60-a7ca-1fd2db3f7828/%EC%BA%A1%EC%B2%98.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144600Z&X-Amz-Expires=86400&X-Amz-Signature=420bd7acb4eb4f45686b6e2de7a8c88daafd8947b9e88627e6963856660ff74d&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EC%25BA%25A1%25EC%25B2%2598.JPG.jpg%22&x-id=GetObject)
 
 ### ❓ javac 명령어란?
 
@@ -146,15 +147,16 @@ javac <option> <filename.java>
 - 인터프리터의 단점을 보완하기 위해 도입되었다.
 - 인터프리터 방식으로 실행하다가 적절한 시점에 바이트코드 전체를 컴파일하여 네이티브 코드로 변경하고, 이후에는 해당 메서드를 더 이상 인터프리팅하지 않고 네이티브 코드로 직접 실행하는 방식이다.
     - 네이티브 코드를 실행하는 것이 하나씩 인터프리팅하는 것보다 빠르고, 네이티브 코드는 캐시에 보관하기 떼문에 한 번 컴파일된 코드는 계속 빠르게 수행되게 된다.
+    * 코드 캐시(Code Cache)에 저장 된다고 한다. ⇒ [**링크**](https://inspirit941.tistory.com/352)
 
 ### ❓ JIT 컴파일러는 어떻게 동작할까?
 
-![helloworld-1230-7.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/4402317b-07ec-4337-b54a-e84ee1c3524b/helloworld-1230-7.png)
+![helloworld-1230-7.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/4402317b-07ec-4337-b54a-e84ee1c3524b/helloworld-1230-7.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144651Z&X-Amz-Expires=86400&X-Amz-Signature=7b519860933dca9f6cba37a1bab3211b630edb9608ce559f2aea8f3e69df6c59&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-7.png%22&x-id=GetObject)
 
 - JIT 컴파일러가 컴파일하는 과정은 바이트 코드를 하나씩 인터프리팅 하는 것보다 훨씬 오래 걸리므로, 만약 한 번만 실행되는 코드라면 컴파일 하지 않고 인터프리팅 하는 것이 훨씬 유리하다.
 - JIT 컴파일러를 사용하는 JVM들은 내부적으로 해당 메서드가 얼마나 자주 수행되는지 체크하고, 일정 정도를 넘을 때에만 컴파일을 수행한다.
 
-![helloworld-1230-8.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/46201c20-a1e7-4df1-86c9-9e70705a0998/helloworld-1230-8.png)
+![helloworld-1230-8.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/46201c20-a1e7-4df1-86c9-9e70705a0998/helloworld-1230-8.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144707Z&X-Amz-Expires=86400&X-Amz-Signature=e478d7ae6fffcd092a676a53933d3a84ab29cc78d089f47b2ee9fe642673b19a&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-8.png%22&x-id=GetObject)
 
 - IR(Intermediate Representation) Generator
     - 중간 코드 생성
@@ -169,11 +171,11 @@ JIT 컴파일러는 바이트 코드를 일단 중간 단계의 표현인 IR(Int
 
 # JVM 구성 요소
 
-![helloworld-1230-1.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/0db43727-a45b-45a9-80c0-dc6248e6ebff/helloworld-1230-1.png)
+![helloworld-1230-1.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/0db43727-a45b-45a9-80c0-dc6248e6ebff/helloworld-1230-1.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144723Z&X-Amz-Expires=86400&X-Amz-Signature=227617f2b910258843140e9d44d08ce2d736b76a2ff1820daf067777f58c2f57&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-1.png%22&x-id=GetObject)
 
 **클래스 로더(Class Loader)가 컴파일된 자바 바이트 코드를 런타임 데이터 영역(Runtime Data Areas)에 로드하고, 실행 엔진(Execution Engine)이 자바 바이트 코드를 실행한다.**
 
-![JVM-Architecture.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/73b8dfea-ff7b-42e6-aca3-b9ecce81c871/JVM-Architecture.png)
+![JVM-Architecture.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/73b8dfea-ff7b-42e6-aca3-b9ecce81c871/JVM-Architecture.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144741Z&X-Amz-Expires=86400&X-Amz-Signature=89301dbacd4de114048d95cafa2e3f503dce4ccaff71d1449caaf4e3cd3a5a34&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22JVM-Architecture.png%22&x-id=GetObject)
 
 ### ❓ JVM의 구성요소는?
 
@@ -209,9 +211,63 @@ JIT 컴파일러는 바이트 코드를 일단 중간 단계의 표현인 IR(Int
 
 ### 2️⃣ 런타임 데이터 영역(Runtime Data Area)
 
+![helloworld-1230-4.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/e04ad768-36f2-4c45-a482-ec8c7bf6968f/helloworld-1230-4.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144758Z&X-Amz-Expires=86400&X-Amz-Signature=15f9dce9963bafd37213dac9aaffcd1794715f16648434b97e31e25722e98836&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-4.png%22&x-id=GetObject)
+
+JVM이라는 프로그램이 운영체제 위에서 실행되면서 할당받는 메모리 영역이다.
+
+런타임 데이터 영역은 6개의 영역으로 나눌 수 있다.
+
+### 스레드마다 하나씩 생성되는 영역
+
+- PC 레지스터(PC Register)
+    - PC(Program Counter) 레지스터는 스레드가 시작될 때 생성된다.
+    - 현재 수행 중인 JVM  명령의 주소를 갖는다.
+- JVM스택(JVM stack)
+    - 스레드가 시작될 때 생성된다.
+    - 스택 프레임(Stack Frame)이라는 구조체를 저장하는 스택이다.
+    - JVM은 오직 JVM 스택 프레임을 추가하고 (push) 제거하는(pop) 동작만 수행한다.
+    - 예외 발생 시 printStackTrace() 등의 메소드로 보여주는 StackTrace의 각 라인은 하나의 스택 프레임을 표현한다.
+    - ❓ 스택 프레임이란?
+
+      ![helloworld-1230-5.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/c7d02de9-a04c-4771-8d00-9eb8b0fade27/helloworld-1230-5.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144818Z&X-Amz-Expires=86400&X-Amz-Signature=d83f8afc1ba4c75f1e878235d4c37afb86e5977d8bba8d5590b943746b9aa5ac&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-5.png%22&x-id=GetObject)
+
+        - JVM 내에서 메소드가 수행될 때마다 하나의 스택 프레임이 생성되어
+          해당 스레드의 JVM 스택에 추가되고 메소드가 종료되면 스택 프레임이 제거된다.
+        - 각 스택 프레임은 지역 변수 배열(Local Variable Array), 피연산자 스택(Operand Stack), 현재 실행중인 메소드가 속한 클래스의 런타임 상수 풀에 대한 레퍼런스를 갖는다.
+        - 지역 변수 배열, 피연산자 스택의 크기는 컴파일 시에 결정되기 때문에 스택 프레임의 크기도 메소드에 따라 크기가 고정된다.
+            - 지역 변수 배열 : 0부터 시작하는 인덱스를 가진 배열이다. 0은 메서드가 속한 클래스 인스턴스의 this 레퍼런스이고, 1부터는 메서드에 전달된 파라미터들이 저장되며, 메서드 파라미터 이후에는 메서드의 지역 변수들이 저장된다.
+            - 피연산자 스택 : 메서드의 실제 작업 공간이다. 각 메서드는 피연산자 스택과 지역 변수 배열 사이에서 데이터를 교환하고, 다른 메서드 호출 결과를 추가하거나(push) 꺼낸다(pop). 피연산자 스택 공간이 얼마나 필요한지는 컴파일 할 때 결정할 수 있으므로, 피연산자 스택의 크기도 컴파일 시에 결정된다.
+
+- 네이티브 메소드 스택(Native Method Stack)
+    - 자바 외의 언어로 작성된 네이티브 코드를 위한 스택이다.
+    - JNI(Java Native Interface)를 통해 호출하는 C/C++등의 코드를 수행하기 위한 스택으로,
+      언어에 맞게 C 스택이나 C++ 스택이 생성된다.
+- 메소드 영역
+    - 모든 스레드가 공유하는 영역으로 JVM이 시작될 때 생성된다.
+    - JVM이 읽어 들인 각각의 클래스와 인터페이스에 대한 런타임 상수 풀, 필드와 메서드 정보, Stack 변수, 메소드의 바이트 코드 등을 보관한다.
+    - 메소드 영역은 JVM 벤더마다 다양한 형태로 구현할 수 있으며, 오라클 핫스팟 JVM(HotSpot JVM)에서는 흔히 Permanent Area, 혹은 Permanent Generation(PermGen)이라고 불린다.
+    - 메소드 영역에 대한 가비지 컬렉션은 JVM 벤더의 선택 사항이다.
+    * JVM 벤더란 JVM 제공사 혹은 판매사이다.
+      ex) 오라클, Julu 등
+- 런타임 상수 풀
+    - 클래스 파일 포맷에서 constant_pool 테이블에 해당하는 영역
+    - 메소드 영역에 포함되는 영역이긴 하지만, JVM 동작에서 가장 핵심적인 역할을 수행하는 곳이기 때문에 JVM 명세에서도 따로 중요하게 기술한다.
+    - 각 클래스와 인터페이스의 상수뿐만 아니라, 메소드와 필드에 대한 모든 레퍼런스까지 담고 있는 테이블이다.
+    - 즉 어떤 메소드나 필드를 참조할 때 JVM은 런타임 상수 풀을 통해 해당 메서드나 필드의 실제 메모리상 주소를 찾아서 참조한다.
+- 힙
+    - 인스턴스 또는 객체를 저장하는 공간으로 가비지 컬렉션 대상이다.
+    - JVM 성능 등의 이슈에 가장 많이 언급되는 공간이다.
+    - 힙 구성 방식이나 가비지 컬렉션 방법 등은 JVM 벤더의 재량이다.
+
+### 스레드가 공유해서 사용하는 영역
+
+- 힙(Heap)
+- 메서드 영역(Method Area)
+- 런타임 상수 풀(Runtime Constant Pool)
+
 ### ❓ JVM에서 Java Stack 메모리를 Stack 자료구조로 구현한 이유는?
 
-![java stack.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ee29b4fb-a255-4401-bf9f-1ddd2b4065b7/java_stack.png)
+![java stack.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/ee29b4fb-a255-4401-bf9f-1ddd2b4065b7/java_stack.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144854Z&X-Amz-Expires=86400&X-Amz-Signature=22403ec52cb9a60c4b4200b34526f131709aa521e864839c30b841484f29b876&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22java%2520stack.png%22&x-id=GetObject)
 
 - 스택 프레임(Stack Frame)
     - 메모리의 스택(Stack) 영역은 함수의 호출과 관계되는 지역 변수와 매개변수가 저장되는 영역이다. 스택 영역은 함수의 호출과 함께 할당되며, 함수의 호출이 완료되면 소멸합니다.
@@ -220,9 +276,9 @@ JIT 컴파일러는 바이트 코드를 일단 중간 단계의 표현인 IR(Int
       이러한 스택 프레임 덕분에 함수의 호출이 모두 끝난 뒤에, 해당 함수가 호출되기 이전 상태로 되돌아갈 수 있습니다.
 
 
-![img_c_stackframe_01.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ce3f6799-f03f-49e3-98f8-59835b381290/img_c_stackframe_01.png)
+![img_c_stackframe_01.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/ce3f6799-f03f-49e3-98f8-59835b381290/img_c_stackframe_01.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144911Z&X-Amz-Expires=86400&X-Amz-Signature=be476895ced0c1561938ccf055ce5eede5972103801f767d5c80f02768ac97ee&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22img_c_stackframe_01.png%22&x-id=GetObject)
 
-![img_c_stackframe_02.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/de095e40-7b50-4d87-831c-ccc0459ef11e/img_c_stackframe_02.png)
+![img_c_stackframe_02.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/de095e40-7b50-4d87-831c-ccc0459ef11e/img_c_stackframe_02.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144928Z&X-Amz-Expires=86400&X-Amz-Signature=e2b8051d4ff7ad0b221f132c58569c7c54ba84d5e0cf0843810bd992b8294516&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22img_c_stackframe_02.png%22&x-id=GetObject)
 
 - 스택 프레임에 대한 이해를 바탕으로 위 사진을 참고하면 왜 Stack 자료구조를 사용하는지 알 수 있습니다.
   함수 안에서 다른 함수를 호출하면 위의 사진과 같이 쌓이게 되는 것입니다.
@@ -231,11 +287,29 @@ JIT 컴파일러는 바이트 코드를 일단 중간 단계의 표현인 IR(Int
 
 ### 3️⃣ 실행 엔진(Execution Engine)
 
+- 클래스 로더를 통해 JVM 내의 런타임 데이터 영역에 배치된 바이트 코드는 실행 엔진에 의해 실행된다.
+- 실행 엔진은 자바 바이트 코드를 명령어 단위로 읽어서 실행한다.
+  CPU가 기계 명령어를 하나씩 실행하는 것과 비슷하다.
+- 바이트코드의 각 명령어는 1바이트짜리 OpCode와 추가 피연산자로 이루어져 있으며,
+  실행 엔진은 하나의 OpCode를 가져와서 피연산자와 함께 작업을 수행한 다음, 다음 OpCode를 수행하는 식으로 동작한다.
+* OpCode란 명령코드로 기계어의 일부이며 수행할 명령어를 나타내는 부호를 말한다.
+- 그런데 자바 바이트 코드는 기계가 바로 수행할 수 있는 언어보다는 비교적 인간이 보기 편한 형태로 기술된 것이다. 그래서 실행 엔진은 이와 같은 바이트코드를 실제로 JVM 내부에서 기계가 실행할 수 있는 형태로 변경하며, 그 방식은 다음 두 가지가 있다.
+
+- 인터프리터
+    - 바이트코드 명령어를 하나씩 읽어서 해석하고 실행한다.
+    - 하나씩 해석하고 실행하기 때문에 바이트 코드 하나하나의 해석은 빠른 대신 인터프리팅 결과의 실행은 느리다는 단점을 가지고 있다.
+      흔히 얘기하는 인터프리터 언어의 단점을 그대로 가지는 것이다.
+    - 바이트 코드라는 ‘언어’는 기본적으로 인터프리팅 방식으로 동작한다.
+- JIT(Just-In-Time) 컴파일러
+    - 인터프리터의 단점을 보완하기 위해 도입되었다.
+    - 인터프리터 방식으로 실행하다가 적절한 시점에 바이트 코드 전체를 컴파일하여 네이티브 코드로 변경하고, 이후에는 해당 메소드를 더 이상 인터프리팅 하지 않고 네이티브 코드로 직접 실행하는 방식이다.
+    - 네이티브 코드를 실행하는 것이 하나씩 인터프리팅하는 것보다 빠르고, 네이티브 코드는 캐시에 보관하기 때문에 한 번 컴파일된 코드는 계속 빠르게 수행되게 된다.
+
 # JDK와 JRE의 차이
 
 JDK와 JRE는 자바 프로그래밍의 핵심 개념들이라 자바 개발자라면 꼭 알아야 한다.
 
-![JDK.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/76c69fb6-2c75-44d9-9a58-c25cc1cbee80/JDK.png)
+![JDK.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/76c69fb6-2c75-44d9-9a58-c25cc1cbee80/JDK.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144947Z&X-Amz-Expires=86400&X-Amz-Signature=b6c5d6dba575fb2c9678f11bcfe2a2a7bb0b175a8eac2f937d1b95e0ad8118f2&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22JDK.png%22&x-id=GetObject)
 
 ### ❓ JDK(Java Development Kit)란?
 
