--- a/khoon0608/이것이 자바다/7장 상속.md
+++ b/khoon0608/이것이 자바다/7장 상속.md
@@ -294,3 +294,103 @@ C c1 = new D (X)
 
 ![image](image_2.png)
 출처: 이것이 자바다
+
+### 필드의 다형성
+
+#### 왜 자동 타입 변환이 필요한가?
+
+객체 지향 프로그램에서 수많은 객체들이서로 연결되어 동작하므로 객체마다 원활하게 수정이 가능해야함
+그러므로 교체된 객체도 기존의 객체로써 취급될 필요가 있음
+
+이것을 구현하기 위해서 상속과 오버라이딩, 타입 변환이 필요함
+
+상속으로 갖게된 메소드를 오버라이딩하여 더 우수한 실행 결과를 나오게 해 타입 변환으로 원활하게 수정되는 것이다.
+
+### 하나의 배열로 객체 관리
+
+```
+class Car {
+  Tire frontLeftTire = new Tire("전우", 5);
+  Tire frontLeftTire = new Tire("전좌", 7);
+  Tire frontLeftTire = new Tire("후우", 3);
+  Tire frontLeftTire = new Tire("후좌", 2);
+}
+```
+
+```
+class Car {
+  Tire[] tires = {
+    new Tire("전우", 5);
+    new Tire("전좌", 7);
+    new Tire("후우", 3);
+    new Tire("후좌", 2);
+  }
+}
+```
+
+동일한 타입 값이라면 배열로 관리하는 것이 좋음
+
+### 매개 변수의 다양성
+
+메소드를 호출할 때 매개 변수에 자식 타입 객체를 지정하면 자동 타입 변환이 발생함 
+
+```
+public class Vihicle {
+  public void method1() {
+    System.out.println("Vihicle");
+  }
+}
+```
+
+```
+public class Taxi extends Vihicle {
+  @Override
+  public void method1() {
+    System.out.println("Taxi");
+  }
+}
+```
+
+```
+public class Driver {
+  public void method2(Vihicle vihcle) {
+    vihicle.method1();
+  }
+}
+```
+
+```
+public class Example {
+  Driver driver = new Driver();
+  Taxi taxi = new Taxi();
+  driver.method2(taxi); // Taxi
+  // 자동 타입 변환 발생 (Vihicle vihicle = taxi);
+}
+```
+
+### 강제 타입 변환 (Casting)
+
+부모 타입을 자식 타입으로 변환하는 것
+
+자식 타입이 부모 타입으로 변환 후에만 사용할 수 있음
+
+```
+Parent parent1 = new Child(); // 타입 변환
+Child child1 = (Child) parent1; // 강제 타입 변환 (O)
+
+Parent parent2 = new Parent();
+Child child2 = (Child) parent2; // 강제 타입 변환 (X)
+```
+
+**왜 필요한가?**
+
+부모 타입으로 변환 후에는 자식 클래스 만의 필드와 메소드를 사용하지 못하므로 사용해야 할 때 다시 자식 타입으로 변환할 필요가 있음
+
+### 객체 타입 확인
+
+어떤 객체가 어떤 클래스의 인스턴스인지 확인할 때 쓰는 연산자
+```
+boolean result = 좌항(객체) instanceof 우항(타입)
+```
+
+좌항이 우항의 인스턴스이면 true 아니면 false를 반환
