--- a/choincnp/그림으로 공부하는 IT인프라구조/ch1/230117.md
+++ b/choincnp/그림으로 공부하는 IT인프라구조/ch1/230117.md
@@ -42,3 +42,6 @@
  - ![alt]https://velog.velcdn.com/images%2Fchlee4858%2Fpost%2F3115601a-1f4a-47eb-b728-996199f328d4%2Fimage.png 
  - 장점 : 서버 부하를 집중 개선
  - 단점 : 구조가 클라이언트-서버 구성보다 복잡하다. 
+
+ ## 수평 분할형 아키텍쳐
+- 
