feat : 2주차 공부하고 정리한 것 커밋!

--- a/yarogono/Java/1.JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가.md
+++ b/yarogono/Java/1.JVM은 무엇이며 자바 코드는 어떻게 실행하는 것인가.md
@@ -70,19 +70,19 @@
 
 ### cmd창에서 echo 명령어를 통해 자바(.java) 파일을 생성한다.
 
-![캡처.JPG](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/f221ed62-c6cf-4628-af66-4de9286fb7bb/%EC%BA%A1%EC%B2%98.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144508Z&X-Amz-Expires=86400&X-Amz-Signature=48f22e7b2afc1fa708472fd46c91c522b3bbacf21fad073372de12034b00a396&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EC%25BA%25A1%25EC%25B2%2598.JPG.jpg%22&x-id=GetObject)
+![캡처.JPG](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/f221ed62-c6cf-4628-af66-4de9286fb7bb/%EC%BA%A1%EC%B2%98.jpg)
 
 ### **생성된 파일에  “Hello World”를 출력하는 코드를 작성한다.**
 
-![캡처.JPG](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/74e5632d-2515-49d9-98f1-19f9547cb576/%EC%BA%A1%EC%B2%98.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144520Z&X-Amz-Expires=86400&X-Amz-Signature=9cbb5ac0e2d863f47a5a9009f32d5cf32f0dac90cde863ec67881b41c12bb5e7&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EC%25BA%25A1%25EC%25B2%2598.JPG.jpg%22&x-id=GetObject)
+![캡처.JPG](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/74e5632d-2515-49d9-98f1-19f9547cb576/%EC%BA%A1%EC%B2%98.jpg)
 
 ### **cmd창에서 javac 명령어를 활용해 자바(.java) 파일 컴파일 하기**
 
-![캡처.JPG](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/78fc55a9-dbe4-421b-b0c0-a17677f88e9e/%EC%BA%A1%EC%B2%98.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144536Z&X-Amz-Expires=86400&X-Amz-Signature=3d908ca48c67110864ace4e19766e3218eb72d8abb6e23b6bccc2c92a4b1b8c2&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EC%25BA%25A1%25EC%25B2%2598.JPG.jpg%22&x-id=GetObject)
+![캡처.JPG](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/78fc55a9-dbe4-421b-b0c0-a17677f88e9e/%EC%BA%A1%EC%B2%98.jpg)
 
 ### java 명령어를 통해 컴파일된 클래스(.class) 파일을 실행해본다.
 
-![캡처.JPG](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/a61b9411-712b-4c60-a7ca-1fd2db3f7828/%EC%BA%A1%EC%B2%98.jpg?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144600Z&X-Amz-Expires=86400&X-Amz-Signature=420bd7acb4eb4f45686b6e2de7a8c88daafd8947b9e88627e6963856660ff74d&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22%25EC%25BA%25A1%25EC%25B2%2598.JPG.jpg%22&x-id=GetObject)
+![캡처.JPG](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/a61b9411-712b-4c60-a7ca-1fd2db3f7828/%EC%BA%A1%EC%B2%98.jpg)
 
 ### ❓ javac 명령어란?
 
@@ -151,12 +151,12 @@ javac <option> <filename.java>
 
 ### ❓ JIT 컴파일러는 어떻게 동작할까?
 
-![helloworld-1230-7.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/4402317b-07ec-4337-b54a-e84ee1c3524b/helloworld-1230-7.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144651Z&X-Amz-Expires=86400&X-Amz-Signature=7b519860933dca9f6cba37a1bab3211b630edb9608ce559f2aea8f3e69df6c59&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-7.png%22&x-id=GetObject)
+![helloworld-1230-7.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/4402317b-07ec-4337-b54a-e84ee1c3524b/helloworld-1230-7.png)
 
 - JIT 컴파일러가 컴파일하는 과정은 바이트 코드를 하나씩 인터프리팅 하는 것보다 훨씬 오래 걸리므로, 만약 한 번만 실행되는 코드라면 컴파일 하지 않고 인터프리팅 하는 것이 훨씬 유리하다.
 - JIT 컴파일러를 사용하는 JVM들은 내부적으로 해당 메서드가 얼마나 자주 수행되는지 체크하고, 일정 정도를 넘을 때에만 컴파일을 수행한다.
 
-![helloworld-1230-8.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/46201c20-a1e7-4df1-86c9-9e70705a0998/helloworld-1230-8.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144707Z&X-Amz-Expires=86400&X-Amz-Signature=e478d7ae6fffcd092a676a53933d3a84ab29cc78d089f47b2ee9fe642673b19a&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-8.png%22&x-id=GetObject)
+![helloworld-1230-8.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/46201c20-a1e7-4df1-86c9-9e70705a0998/helloworld-1230-8.png)
 
 - IR(Intermediate Representation) Generator
     - 중간 코드 생성
@@ -171,11 +171,11 @@ JIT 컴파일러는 바이트 코드를 일단 중간 단계의 표현인 IR(Int
 
 # JVM 구성 요소
 
-![helloworld-1230-1.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/0db43727-a45b-45a9-80c0-dc6248e6ebff/helloworld-1230-1.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144723Z&X-Amz-Expires=86400&X-Amz-Signature=227617f2b910258843140e9d44d08ce2d736b76a2ff1820daf067777f58c2f57&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-1.png%22&x-id=GetObject)
+![helloworld-1230-1.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/0db43727-a45b-45a9-80c0-dc6248e6ebff/helloworld-1230-1.png)
 
 **클래스 로더(Class Loader)가 컴파일된 자바 바이트 코드를 런타임 데이터 영역(Runtime Data Areas)에 로드하고, 실행 엔진(Execution Engine)이 자바 바이트 코드를 실행한다.**
 
-![JVM-Architecture.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/73b8dfea-ff7b-42e6-aca3-b9ecce81c871/JVM-Architecture.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144741Z&X-Amz-Expires=86400&X-Amz-Signature=89301dbacd4de114048d95cafa2e3f503dce4ccaff71d1449caaf4e3cd3a5a34&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22JVM-Architecture.png%22&x-id=GetObject)
+![JVM-Architecture.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/73b8dfea-ff7b-42e6-aca3-b9ecce81c871/JVM-Architecture.png)
 
 ### ❓ JVM의 구성요소는?
 
@@ -211,7 +211,7 @@ JIT 컴파일러는 바이트 코드를 일단 중간 단계의 표현인 IR(Int
 
 ### 2️⃣ 런타임 데이터 영역(Runtime Data Area)
 
-![helloworld-1230-4.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/e04ad768-36f2-4c45-a482-ec8c7bf6968f/helloworld-1230-4.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144758Z&X-Amz-Expires=86400&X-Amz-Signature=15f9dce9963bafd37213dac9aaffcd1794715f16648434b97e31e25722e98836&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-4.png%22&x-id=GetObject)
+![helloworld-1230-4.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/e04ad768-36f2-4c45-a482-ec8c7bf6968f/helloworld-1230-4.png)
 
 JVM이라는 프로그램이 운영체제 위에서 실행되면서 할당받는 메모리 영역이다.
 
@@ -229,7 +229,7 @@ JVM이라는 프로그램이 운영체제 위에서 실행되면서 할당받는
     - 예외 발생 시 printStackTrace() 등의 메소드로 보여주는 StackTrace의 각 라인은 하나의 스택 프레임을 표현한다.
     - ❓ 스택 프레임이란?
 
-      ![helloworld-1230-5.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/c7d02de9-a04c-4771-8d00-9eb8b0fade27/helloworld-1230-5.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144818Z&X-Amz-Expires=86400&X-Amz-Signature=d83f8afc1ba4c75f1e878235d4c37afb86e5977d8bba8d5590b943746b9aa5ac&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22helloworld-1230-5.png%22&x-id=GetObject)
+      ![helloworld-1230-5.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/c7d02de9-a04c-4771-8d00-9eb8b0fade27/helloworld-1230-5.png)
 
         - JVM 내에서 메소드가 수행될 때마다 하나의 스택 프레임이 생성되어
           해당 스레드의 JVM 스택에 추가되고 메소드가 종료되면 스택 프레임이 제거된다.
@@ -267,7 +267,7 @@ JVM이라는 프로그램이 운영체제 위에서 실행되면서 할당받는
 
 ### ❓ JVM에서 Java Stack 메모리를 Stack 자료구조로 구현한 이유는?
 
-![java stack.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/ee29b4fb-a255-4401-bf9f-1ddd2b4065b7/java_stack.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144854Z&X-Amz-Expires=86400&X-Amz-Signature=22403ec52cb9a60c4b4200b34526f131709aa521e864839c30b841484f29b876&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22java%2520stack.png%22&x-id=GetObject)
+![java stack.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ee29b4fb-a255-4401-bf9f-1ddd2b4065b7/java_stack.png)
 
 - 스택 프레임(Stack Frame)
     - 메모리의 스택(Stack) 영역은 함수의 호출과 관계되는 지역 변수와 매개변수가 저장되는 영역이다. 스택 영역은 함수의 호출과 함께 할당되며, 함수의 호출이 완료되면 소멸합니다.
@@ -276,9 +276,9 @@ JVM이라는 프로그램이 운영체제 위에서 실행되면서 할당받는
       이러한 스택 프레임 덕분에 함수의 호출이 모두 끝난 뒤에, 해당 함수가 호출되기 이전 상태로 되돌아갈 수 있습니다.
 
 
-![img_c_stackframe_01.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/ce3f6799-f03f-49e3-98f8-59835b381290/img_c_stackframe_01.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144911Z&X-Amz-Expires=86400&X-Amz-Signature=be476895ced0c1561938ccf055ce5eede5972103801f767d5c80f02768ac97ee&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22img_c_stackframe_01.png%22&x-id=GetObject)
+![img_c_stackframe_01.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/ce3f6799-f03f-49e3-98f8-59835b381290/img_c_stackframe_01.png)
 
-![img_c_stackframe_02.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/de095e40-7b50-4d87-831c-ccc0459ef11e/img_c_stackframe_02.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144928Z&X-Amz-Expires=86400&X-Amz-Signature=e2b8051d4ff7ad0b221f132c58569c7c54ba84d5e0cf0843810bd992b8294516&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22img_c_stackframe_02.png%22&x-id=GetObject)
+![img_c_stackframe_02.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/de095e40-7b50-4d87-831c-ccc0459ef11e/img_c_stackframe_02.png)
 
 - 스택 프레임에 대한 이해를 바탕으로 위 사진을 참고하면 왜 Stack 자료구조를 사용하는지 알 수 있습니다.
   함수 안에서 다른 함수를 호출하면 위의 사진과 같이 쌓이게 되는 것입니다.
@@ -309,7 +309,7 @@ JVM이라는 프로그램이 운영체제 위에서 실행되면서 할당받는
 
 JDK와 JRE는 자바 프로그래밍의 핵심 개념들이라 자바 개발자라면 꼭 알아야 한다.
 
-![JDK.png](https://s3.us-west-2.amazonaws.com/secure.notion-static.com/76c69fb6-2c75-44d9-9a58-c25cc1cbee80/JDK.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=AKIAT73L2G45EIPT3X45%2F20230118%2Fus-west-2%2Fs3%2Faws4_request&X-Amz-Date=20230118T144947Z&X-Amz-Expires=86400&X-Amz-Signature=b6c5d6dba575fb2c9678f11bcfe2a2a7bb0b175a8eac2f937d1b95e0ad8118f2&X-Amz-SignedHeaders=host&response-content-disposition=filename%3D%22JDK.png%22&x-id=GetObject)
+![JDK.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/76c69fb6-2c75-44d9-9a58-c25cc1cbee80/JDK.png)
 
 ### ❓ JDK(Java Development Kit)란?
 
