feat: 42862 JS 풀이 추가

--- a/pengooseDev/Core_JS/02. 실행 컨텍스트/00. Hoisting.md
+++ b/pengooseDev/Core_JS/02. 실행 컨텍스트/00. Hoisting.md
@@ -2,6 +2,14 @@
 
 > 변수와 함수의 메모리 공간을 선언 전에 미리 할당하는 것.
 
+선언과 할당 중, 선언만이 호이스팅의 대상이 된다.
+
+```js
+console.log(num); // 호이스팅한 var 선언으로 인해 undefined 출력
+var num; // 선언
+num = 6; // 초기화
+```
+
 변수, 함수
 
 ```js
