--- a/lLcrowe/게임개발에 대해 개인적으로 생각해봐야될것.md
+++ b/lLcrowe/게임개발에 대해 개인적으로 생각해봐야될것.md
@@ -90,10 +90,8 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 ## 생각해볼것
 #### 1. 혼자하는것 관련  
 음..만들려는 게임에 대해 타협할수가 없고 그걸 팀원이 될사람한테 강제로 요구해서
-상처 입히기도 싫다.
-
-
-
+상처 입히기도 싫다.  
+하지만..변화의 시기가 필요하다고는 느낀다.  
 
 #### 2. 게임콘텐츠개발자로 살아갈지 게임미들웨어개발자로 살아갈지  
 게임콘텐츠개발자. 게임개발자는 게임을 만들어야지.
@@ -147,6 +145,10 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 점점 기술적으로 정체되는 느낌과 함께 돈이 부족해지고 나이떄가 애매해지기 시작하여 취준생으로
 방향을 전환했다.  
 
+이때까지 투자한 자본과 시간만 400만원 + 40만원 + 40만원 + 책값 + 동영상강의등을 합쳐 800만원과
+기술, 연구, 관찰, 방향성등 게임에 들어가는 대부분 기술들에 4년을 투자했다.
+그중에서 제일 많이 접촉이 있었던 구역인 프로그래밍의 실력이 제일높았고.
+
 ##### 아마 이 기간동안 변질됫을것이다. 게임콘텐츠를 위한게 아닌 게임기술쪽으로
 
 ---
@@ -169,6 +171,10 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 흠 세번이상갔으니 돌아가자
 결국 만들려는 게임에 기술이 필요하여 투자했으나 자랑스럽게 여기는건 게임콘텐츠가 아닌
 게임기술.
+
+지향하는 방향이 망각이 됫다.
+
+
 
 
 
