--- a/lLcrowe/게임개발에 대해 개인적으로 생각해봐야될것.md
+++ b/lLcrowe/게임개발에 대해 개인적으로 생각해봐야될것.md
@@ -86,6 +86,7 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 급이 맞아야지. 말을 나누던가 하지.
 
 #### 3월달에 분위기 싸하면 이번년도는 끝났다
+---
 
 ## 생각해볼것
 #### 1. 혼자하는것 관련  
@@ -93,6 +94,7 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 상처 입히기도 싫다.  
 하지만..변화의 시기가 필요하다고는 느낀다.  
 
+---
 #### 2. 게임콘텐츠개발자로 살아갈지 게임미들웨어개발자로 살아갈지  
 게임콘텐츠개발자. 게임개발자는 게임을 만들어야지.
 애초에 들어온 이유도 게임콘텐츠때문에 들어왔다. 
@@ -101,8 +103,7 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 그리고 나의 실력에 대한 한계가 뚜렷히 보인다.
 그걸 넘을수 없는것도.
 
-
-
+---
 #### 3. 내가 4년동안 투자한게 무엇을 위한것인지
 게임컨텐츠를 만들려고 시작했다. 그걸 만들기 위해 게임기술이 필요했고  
 그런데 게임기술들을 구현하면서 구현했을때에 대한 재미를 더 느끼는거 같다.  
@@ -174,46 +175,13 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 
 지향하는 방향이 망각이 됫다.
 
+난 게임을 만들려고 이 길로 들어왔다. 만들게임이 많이 있다.  
+만들고 싶은 게임은 최소 17개 이다.  
+이 게임들은 내가 재밌게 했던 게임에 대한 경험들을 새로 조합하여  
+구상한 게임들은 각각의 개성을 가질것이다. 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+---
 
 
 ### 질문사항
@@ -227,6 +195,7 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 게임제작관련 이야기할때 기능관련 이야기할떄와 콘텐츠관련 이야기할떄 어떤게 더재밌게 느끼는가
 =>재미를 게임컨텐츠보다 기술쪽관련해서 더 느끼는거 같다.말할떄 느껴짐
 
+---
 
 ### 게임 프로그래머 취업 전략가이드(인프런)
 
