--- a/lLcrowe/게임개발에 대해 개인적으로 생각해봐야될것.md
+++ b/lLcrowe/게임개발에 대해 개인적으로 생각해봐야될것.md
@@ -208,6 +208,7 @@ UI를 시킬려고 했더니 다른걸 알고 있음.
 전문적인 면접관이 아니기떄문에 꼼꼼히 안봄
 
 그들을 확 휘어잡을수 있는 무언가를 준비해야됨
+최대한 눈에 띄는 포폴
 
 
 기술소개서를 200페이지로 쓰는건 안좋다
@@ -271,7 +272,12 @@ PR시대
 
 
 
-
+프로아카데미(찾아보니 서버개발관련)
+강사가 최고시다
+입사후에 다녀도됨
+학원을 활용해라
+이동거리 =  속도 * 이동시간
+실력상승 = 재능 * 투자시간
 
 
 
