--- a/lLcrowe/컴퓨터 사이언스공부.md
+++ b/lLcrowe/컴퓨터 사이언스공부.md
@@ -20,13 +20,17 @@
 4년동안 1인개발하다가 좀더 많은 노하우와 커리어가 필요하여 취업을 하기로 결정.
 취업을 위한 의도로 최근 취업트랜드에 맞게 공부를 하려함
 
-## 
+## 요구사항 & 조사
 
 전공서적책을 꺼내서 일일히 보는것보다는 필요한것만 추출
 
 넓고 얕게 배우는 컴퓨터구조, 자료구조와 알고리즘, 프로그래밍, 운영체제
 https://www.youtube.com/playlist?list=PLXvgR_grOs1BQCziQ_MpM877BdBxwbMzA
 
+
+---
+
+#### 20230203
 7시간동안 핵심만 배울수 있게, 인생에 바보같은 질문은 없습니다.  
 
 IT하면서 필요한 최소한을 딱딱 모이놓음
