--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -1,5 +1,5 @@
 
-# C, C++ 공부
+# 수학공부 보완
 
 ## 목적  
 
@@ -23,20 +23,16 @@
 
 ## 요구사항 & 조사
 
-난 C#만 배웟고 C# 신봉자 읍읍.  
-만들 2D 게임들을 위해 유니티만 할 예정이긴하다. 
-하지만 3D 프로젝트들은 언리얼에서 작업할 예정이다.
-그외에 주변분들이 나정도의 실력은 각잡고 C++ 1일주일, 1달정도면 충분히 가능하다.
-라고 말한다.  
-##### 이건 남의 말에 대한 믿음을 가지고 도전해보는것이다.  
-한분은 자체엔진에 자체서버를 가지고 있고 각종언어로 자체엔진에 임포트시켜본 경험이 있는분.
-다른 한분은 스터디에서 꾸준히보고 4년 넘게 지속적으로 알고 지낸분이며 현재는 4년차.
+코드는 잘짜지만 아직도 수학이 약하다. 수학의 전체를 볼필요는 없고
+필요한 부분만 가져가기 위한 수학공부
+
+
 
 확인해보니 이쪽이 괜찮게 강의해주는거 같아 이걸로 선택했다.
+또한 책하나 이득우의 게임수학 책을 볼 예정이다.
 
-C언어/C++ 무료강의 [2021년 특강]
-어소트락 게임아카데미
-https://www.youtube.com/playlist?list=PL4SIC1d_ab-aOxWPucn31NHkQvNPHK1D1
+수포자를 위한 게임 수학
+https://www.youtube.com/playlist?list=PL-xqYJ8bjgMC-p94R7iXjFCs-znRg93PJ
 
 
----
+
