--- a/lLcrowe/알고리즘 및 코테공부.md
+++ b/lLcrowe/알고리즘 및 코테공부.md
@@ -22,7 +22,7 @@
 
 ## 요구사항 & 조사
 
-백준 or 프로그래머스인데 지금은 프로그래머스가 편하니 이걸로
+백준 or 프로그래머스인데 지금은 프로그래머스가 편하니 이걸로 
 
 하루에 한개 이상 하자고 했고 아마 3일마다 1개로 될거 같다고 말하심
 
@@ -30,10 +30,16 @@
 
 날짜랑 한것들 적자
 
+20230204//코드도 적을까?
+
+적는게 맞아보이는데 찾기 귀찮
+
 ---
 
 #### 20230204
 ![20230204코테](20230204코테.png)
 
 #### 20230205
+![20230205코테](20230205코테.png)
 
+#### 20230206
