--- a/lLcrowe/어드레서블 공부.md
+++ b/lLcrowe/어드레서블 공부.md
@@ -1,2 +1,8 @@
 -=20230124  
 복 받고 구매한 어드레서블 패치시스템 구현 강의를 보고 정리
+
+
+
+
+에디터와 앱빌드가 동일하게 동작하기 까지는 어드레서블 빌드후에 앱빌드를 해서 앱빌드에 어드레서블빌드 결과물이 포함된 상태를 말함
+.APK를 실행했을때 동일하게 동적할당했다는정도로 정리
