--- a/lLcrowe/그래픽 랜더링 파이프라인 (3D그래픽스)(DX11) 공부.MD
+++ b/lLcrowe/그래픽 랜더링 파이프라인 (3D그래픽스)(DX11) 공부.MD
@@ -25,7 +25,18 @@
 확실히 난 여기가 취약하다. 게임을 맛깔나게 하는구역은 쉐이더 그래프공부가 우선이지만
 약한부위를 보완하기 위해 필요하다. 
 OpenGL로 학교에서 배워서 우측 손 좌표계를 사용했었다.
-DX11 DX12 는 좌측손 좌표계
+DX11 DX12 는 좌측손 좌표계. 그래서 유니티는 좌측손좌표계를 사용한다.
+DX11과 DX12의 차이는 모듈화차이다
+DX12가 더 분리되있어서 최적화는 DX12가 쉽다.
 
+일단..여기 분야는 내가 잘 모른다.
+난 코드를 짜고 전체구조보고 마음에 안들면 리팩토링하고, 추가적인 컨텐츠만들때
+데이터체크하면서 지냈다. 뭐 디자인패턴은 이렇고 DI는 이렇고 하는데 
+개인적으로는  SOLID의 S에 맞추어서 짜는 사람이어서 글쌔..
+디자인패턴이라든가 여러가지를 개념을 보고 실습해봣지만 S만 제대로 보면
+그런거 의미 없다고 느낄정도로 S만 있으면 된다.
+나머지는 지속적으로 코드짜면서 얻는 경험이다. 그외에는 심플이즈베스트만 외치면 된다.
+
+다시 돌아와서 이분야는 취약하다.
 
 ---
