--- a/lLcrowe/컴퓨터 사이언스공부.md
+++ b/lLcrowe/컴퓨터 사이언스공부.md
@@ -132,8 +132,150 @@ USB D-Sub DVI HDMI 등등
 
 
 
-컴퓨터하면 대략 이정도가 컴퓨터
+### 컴퓨터하면 대략 이정도가 컴퓨터
 ![File](file.png)
+
+
+### 20230204
+
+정리
+컴퓨터부품으로 제일 큰 부품은 메인보드이다
+
+메인보드위에는 CPU를 올리고 주 기억장치인RAM을
+올린다.
+
+CPU와 RAM에 있는 정보를 주고받을때 메인보드내에
+칩셋에서 처리해준다
+
+
+메인보드와 보조기억장치를 이어줄때 
+SATA로 연결된다.
+
+컴퓨터라고 하면 컴퓨터속의 모든정보는
+모조리 숫자이다.
+
+
+숫자로 되있는 정보를 CPU에 들어와서 연산을한다
+
+
+보조기억장치(1)에서 가져와서
+주기억장치(2)로 가져온후 CPU(3)에서 연사을 했더니
+
+소리를 내는 데이터면
+사운드카드로 데이터를 보내서
+스피커를 울리게함
+
+
+
+VGA 비디오카드 => 모니터(시각화)
+GPU 그래픽연산에 대한 장치가 있음
+
+
+![컴퓨터내부요약본](컴퓨터내부요약본.png)
+
+
+
+### 핵심은 CPU RAM 보조기억장치 쪽이다
+
+
+
+1비트에서 진법변환까지
+
+컴퓨터의 구조를 공부를 할려면 CPU의 구조를 공부해야되는데
+반드시 알아야 될 2가지
+1. 1비트를 알아야된다. (1bit)
+2. 진법변환을 알아야된다.
+
+
+
+1비트란 전기스위치 1개를 의미한다
+전기가 흐르는 on상태는 1
+전기가 흐르지 않는 Off상태는 0이다.
+
+
+전기스위치 하나가 1비트이다.
+
+
+한 위치에 올수 있는 숫자가 0~1사이밖에 안되는
+2가지경우만 있는데 이렇게 2진수로 표현
+
+0110 네자리숫자
+
+이진수를 십진수로 바꾸는걸 어렵지 않다. 이러한걸 
+진법 변환이라고 한다
+
+
+십집법
+
+![십진법](십진법.png)
+
+이진법
+
+![이진법](이진법.png)
+
+
+이렇게 변환 계산하여 이해할수 있게 한다.
+
+경우의 수가 2가지인데 이걸 조합하여
+2의 4제곱만큼 경우의 수가 생긴다.
+
+
+위같은경우 4비트로 말하고
+16가지 경우의수가 가능하다
+
+
+
+### 1bit와 4GV (중요외우기)
+여러비트를 조합함으로써 큰수를 표현할수 있다.
+예를 들어 4비트는 0에서 2의4제곱 빼기 1까지 표현한다.
+(16가지의 경우수를 가지며 0~15까지 있다)
+
+8개 비트를 하나로 묶어 1바이트(Byte)라 한다
+1바이트는 영문자 한 글자가 저장될수 있는 메모리크기다.
+한글 한글자를 저장할려면 2바이트가 필요하다
+2의 10 제곱은 1024이다
+2의 32 제곱은 4294967296 바이트 이다. 4GB(기가바이트)
+2의 32 제곱은 32Bit를 의미한다. 즉 32비트 구조의 한계용량은 4GB이다
+4비트의 16가지, 8비트는 256가지, 16비트는 65536 이다. 
+#### 일단 이렇게 외우자
+
+
+단위가 올라갈때 무게같은 경우 천단위로 끓는다. (1kg -> 1000g)
+컴퓨터는 1024단위이다.
+
+![용량말하는방법](용량말하는방법.png)
+
+2가지는 무조건 외우기
+
+![용량말하는법암기할것](용량말하는법암기할것.png)
+
+
+
+
+### 20230205
+
+### 진법변환
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
