--- a/lLcrowe/컴퓨터 사이언스공부.md
+++ b/lLcrowe/컴퓨터 사이언스공부.md
@@ -252,31 +252,96 @@ GPU 그래픽연산에 대한 장치가 있음
 
 
 
-### 20230205
+### 20230206
 
 ### 진법변환
 
+1비트-> 전기스위치 1개
+4개의 스위치가 4bit 
+4 + 4 = 8bit => 1byte
+4bit는 16진수
+
+0 1 2 3 4 5 6 7 8 9 A B C D E F 16진법
+4비트는 16진수 한자리숫자다
+16진수는 0~F 까지 한자리에 표기한다.
+
+0x73 => 이진수 표현할려면
+7(4bit) + 3(4bit) = 8bit(1Byte)
+
+8 4 2 1 - 8 4 2 1  
+0 1 1 1 - 0 0 1 1  
+
+16에 1제곱 = 16
+16에 0제곱 = 1
+그러니까
+
+(16 * 7)  + (1 * 3) = 115
+
+IT 기술은 이렇게 가져가니까
+이걸 잘알고 있어라
+
+x의 제곱 => pow  
+16에 2제곱 = 256  
+16에 1제곱 = 16  
+16에 0제곱 = 1  
+
+x의 루트 => sqrt  
+16에 루트 = 4  
+4에 루트 = 2  
+
+#### 이방식이 빠르고 편하네. 맘에듬
+(1)
+2진수 1100 0011
+16진수 c    3
+10진수 12 * 16 + 3 = 195
+
+(2)
+2진수 1100 0011
+128 64 32 16 8 4 2 1 
+128 64  0  0 0 0 2 1 = 195
+
+
+### OSI7레이어(개념)
+
+![O S I개념](OSI개념.png)
+
+
+무엇에 대한 식별자인지 생각해보기
+
+Port 
+IP주소(V4V6) -> Host(인터넷에 연결된 컴퓨터)
+Mac -> NIC(LAN카드) 유선/무선 노트북 NIC(2개)
+
+
+
+컴퓨터 하나가 여러개의 IP주소를 가질수 있냐
+네 N개를 가질수 있다.
+바인딩N개
+
+Mac 물리주소를 바꿀수 있는가?
+네 바꿀수 있다.
+
+Port번호 뭐에 대한 식별자인가?
+프로세스식별자? (SW개발관리)
+서비스? (네트워크관리)
+인터페이스 번호?
+
+
+User Mode
+
+KernelMode
+
+H/W
+
+IP주소나 Mac번호는 특별한 이슈는 없지만
+Port번호에 대해서는 여러가지형태로 식별대상이 달라진다.
+
+![Macipport](macipport.png)
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+### 20230207
 
 
 
