--- a/lLcrowe/컴퓨터 사이언스공부.md
+++ b/lLcrowe/컴퓨터 사이언스공부.md
@@ -341,7 +341,196 @@ Port번호에 대해서는 여러가지형태로 식별대상이 달라진다.
 
 
 
-### 20230207
+### 20230209
+
+### CPU가 작동하는 원리
+
+컴퓨터라는 기계의 핵심은 CPU.  
+디지털회로 (And, Or, Xor, Not)
+And 논리의곱  
+Or 논리의 합
+xor 베타적(양쪽이 같으면 0, 다르면 1)
+0 false
+1 true
+
+4개의 논리식을 알면 CPU, Ram을 만들수 있다.
+
+![디지털회로](디지털회로.png)
+
+
+5V 사용  
+14번에 칩을 구동하기 위한 전력이 들어옴  
+7번에 그라운드  
+
+7408칩
+
+논리회로를 조합해 가산기를 만들고 1비트 뎃셈연산을 할수 있음.
+S => 현재 값
+C => 자리올림인지 아닌지
+
+이런한 회로를 구현하는 명칭이 (반)가산기라 함
+
+1비트 가산기를 여러개를 이어 32비트덧셈계산기를 만들면 
+32비트 CPU가 된다.
+
+0이든 1이 오든 계산해주는게 가산기
+
+A B 신호두개 C 3개가 와서 여러개가 이어붙혀지면 전가산기
+4개면 4비트 전가산기
+![가산기](가산기.png)
+
+#### 컴퓨터라는 기계는 덧셈만하면 모든게 끝남
+
+왜나하면 보수를 더하면 뺼셈이 되므로
+
+
+2의보수 = 1의보수 = 0 -> 1, 1 <- 0  으로 뒤집기
+
+※보수 : 보충되는수, 10이면 9, 2면 1.  
+특정 숫자를 채우게 하는데 필요한 수를 말한다
+`역`, `반대`, `수를 거꾸로 세는 방식`
+`여집합(餘)/보집합(補)에서 여수/보수` 등
+
+3 - 2 = 1 이 있으면
+
+0 0 1 1 
+0 0 1 0 =>의 뒤집기 변환시작(Not논리회로)
+
+1 1 0 1 + 1 = 1 1 1 0(2의 보수)
+
+※Not + n = 빼기할대상 완성 (n = x진법 - 1)
+
+
+0 0 1 1 
+1 1 1 0
+
+1 0 0 0 1
+왼쪽에 있는 1은 5비트인데
+4비트까지니까 1은 없애버린다.
+그럼 0 0 0 1 이나오고 1이라는 결과값이 도출됨
+
+컴퓨터는 더하는방식으로 뺀다.
+자리올림을 무시하면 자동으로 빼기가 되니까.  
+이사실을 잊지말고 기억해줘라
+
+
+![이진수덧셈으로뺼셈](이진수덧셈으로뺼셈.png)
+
+
+13 - 6 = 7
+13 + 4(보수) = 17 -> 앞자리를 없애면 7
+
+허어 신기한데
+
+대충 123 - 64를 해봣는데
+
+64의 보수는 36 이다
+자리수마다 3 + 6, 6 + 4 
+대략앞에서 계속 꿔올때 9로 체크
+고로 보수는 36
+
+123 + 36 = 159
+앞자리 없애면
+59
+  
+
+
+곱셈, 나눗셈 관련
+여러번 더하면 곱셈
+
+7 * 2 = 7 + 7
+
+
+여러번 빼면 나누기
+
+9 / 3 인 경우
+(9 - 3 = 6) >= 3
+(6 - 3 = 3) >= 3
+(3 - 3 = 0) >= 3 
+3번뺏기때문 9/3은 3이다
+
+7 / 0 을 나누면
+7 - 0 >= 0
+7 - 0 을 끝없이 반복함
+
+(칩이 터졍)
+
+
+
+컴퓨터가 곱셈할때는
+왼쪽으로 한번 밀기 
+
+8 4 2 1
+0 1 0 1 = 5
+
+8 4 2 1
+1 0 1 0 = 10
+
+채워넣는건 Padding
+자리올림나는건 버리기
+
+컴퓨터가 나눌때는
+오른쪽으로 한번 밀기
+
+8 4 2 1
+0 1 0 1 = 5
+
+8 4 2 1
+0 0 1 0 = 2
+
+
+8 4 2 1
+0 1 1 0 = 6
+
+8 4 2 1
+0 0 1 1 = 3
+
+ 
+
+![컴퓨터곱셈](컴퓨터곱셈.png)
+![컴퓨터나눗셈](컴퓨터나눗셈.png)
+
+
+
+
+#### 2023..
+
+헉 기억장치에 대한 이해부터 유료임!
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
