--- a/lLcrowe/어드레서블 공부.md
+++ b/lLcrowe/어드레서블 공부.md
@@ -2,7 +2,75 @@
 복 받고 구매한 어드레서블 패치시스템 구현 강의를 보고 정리
 
 
+어드레서블 빌드할시 프로젝트에 따로 파일이 생김
+게임자체를 빌드하는거랑 다른 빌드.
 
 
 에디터와 앱빌드가 동일하게 동작하기 까지는 어드레서블 빌드후에 앱빌드를 해서 앱빌드에 어드레서블빌드 결과물이 포함된 상태를 말함
 .APK를 실행했을때 동일하게 동적할당했다는정도로 정리
+
+#### 20230209
+어드레서블의 주요파일을 읽어오는 순서
+1. 세팅즈
+2. 카탈로그
+3. 시스템초기화(리소스들에 로테이션관련 매핑이 이루어진다.)
+
+
+//다운로드시스템의 핵심
+RemoteCatalog=>(직역 : 먼 목록파일)
+
+빌트인의 반댓말
+(빌트인)내부에 포함되있다
+빌드시 앱에 포함시키는것.
+
+Remote
+앱자체에 포함시키지않음
+
+
+1. 빌드할시 별도로 설정해논 위치에 리모트카탈로그 생성됨.
+2. 리모트카탈로그는 앱의 재빌드없이 Asset들을 업데이트를 가능하게 한다.
+
+
+리모트카탈로그는 빌드시에 포함시키고자하는 목적이 아닌
+런타임의 중간에 다운로드해서 업데이트하기 위한 목적을가짐
+
+
+
+사용법
+Content Update 의
+1. Build Remote Catalog를 On
+2. BuildAndLoadPath는 Remote
+어드레서블 에셋을 빌드할떄 추가로 생성
+
+
+
+※ 중요
+빌드할시 해쉬가 있는데 빌드할떄마다 같은 해쉬값으로 나옴
+Json컨텐츠가 똑같기떄문. 이것을 빌드했을때 어드레서블에 관해 변경이 없기
+떄문에 같다.
+
+이건 무슨뜻이냐
+상황으로 정의
+로컬에 저장되있으는 카탈로그와 
+서버에 있는 카탈로그가 같으면 바꿀필요가 없다.
+다르면 새롭게 다운하고 로컬에 캐싱하고 카탈로그도 변경
+
+지정한 키가 변경되면 카탈로그값도 변함
+
+
+
+Remote환경설정
+다운로드를 받기 위해 파일서버를 설치
+AWS(현업용), 구글드라이브, 깃허브
+
+
+일단은 로컬호스트에 접근해서 간편하게 파일을 다운로드할수있게하는 
+프로그램으로 사용함
+
+
+
+
+
+
+
+
