--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -26,7 +26,8 @@
 코드는 잘짜지만 아직도 수학이 약하다. 수학의 전체를 볼필요는 없고
 필요한 부분만 가져가기 위한 수학공부
 
-
+유니티관련 사람이어야됨.
+자세히 공부하자
 
 확인해보니 이쪽이 괜찮게 강의해주는거 같아 이걸로 선택했다.
 또한 책하나 이득우의 게임수학 책을 볼 예정이다.
@@ -35,4 +36,35 @@
 https://www.youtube.com/playlist?list=PL-xqYJ8bjgMC-p94R7iXjFCs-znRg93PJ
 
 
+---
 
+
+#### 20230209
+
+### 1) OT
+유니티떄문에 사람들이 공부를 안한다.
+
+게임개발자라면 수학을 잘 숙지하고 있어야하는데
+학생 및 뉴키들이 수학공부를 안한다.
+
+수학적 배경이 부족해도 유니티는 충분히 할수 있게 만들어서
+공부를 '별로' 안한다.  
+
+유니티를 사용하더라도 수학공부는 꾸준히 해야된다  
+유니티는 게임개발의 민주화를 위한 목표 아래로
+누구나 게임개발을 할수 있도록 만든 엔진뿐이지.  
+그렇다고 수학공부를 안해야 할정도로 작동방식은 아님.
+
+기초부분의 커리큘럼을 만듬에도 불구하고
+학생들이 별로 안할려구함. 왜냐하면 어려우니까. 그렇다고 강제로 주입할수는 없죠
+
+
+게임개발도 마찬가지 파이프라인, 수학적인기반, 하드웨어구조 같은 각가지 많은 기초지식
+들을 알고 있어야 게임개발을 더 깊이 있게 더 최적화된 게임을 개발할수 있다.
+
+여기서 말하는 개발자는 게임개발자만이 아닌 게임개발을 하는 모든분들은
+수학을 알고 있어야된다.
+
+게임에 필요한 수학적인 내용들을 다룰것이다.
+
+### 2)
