--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -67,4 +67,287 @@ https://www.youtube.com/playlist?list=PL-xqYJ8bjgMC-p94R7iXjFCs-znRg93PJ
 
 게임에 필요한 수학적인 내용들을 다룰것이다.
 
-### 2)
+### 2) 피타고라스의 정리 정확한 이해
+
+#### 20230210
+
+//목적 : A좌표에서 B좌표의 길이를 구하기, 40/sec
+20, 20 -> 100, 80 
+
+길이를 알아야 최종걸리는 시간을 알수 있음.
+
+수학을 할때 짜증나는건.  
+용어들이 와닿지않기떄문이다.  
+더짜증나는건 이것들을 영어로 알고 있어야된다.  
+자료를 찾아보면 다 영어로 되있음.  
+
+빗변 = hypotenuse
+제곱 = (ㅊ + 특수문자) => ²  
+루트 = (ㄷ + 특수문자) => ^, √  
+
+1. c² = a² + b²
+2. c²^2 = (a² + b²)^2 (양쪽에 루트를 씌우면)
+3. c = (a² + b²)^2 (가 되니 (a² + b²)^2 여기를 구하면 나옴)
+
+고로 공식은
+x좌표, y좌표끼리 빼버리는데 목적(타겟)이 주가 됨
+고로 목적은 좌표값 (100, 80) 이니까
+순서는
+1. ((100 - 20)² + (80 - 20)²) ^2
+2. ((80)² + (60)²) ^2
+3. (6400 + 3600) ^2
+4. (10000) ^2
+5. 100
+
+고로 길이C 값은 == 100 이다
+그 다음에 100길이에서 초당 40만큼 움직이니까
+time = 100 / 40 = 2.5초
+
+
+
+---
+
+![피타고라스증명방법](피타고라스증명방법.png)
+
+---
+
+### 3) 선형대수학(Linear Algebra)
+
+선형대수학을 꺼내면 많이 무서워 반응을 낸다.
+
+사실 별거 아닌거다.
+수학에서는 사전적인 정의만 말하니 확 안닿아옴.
+
+선형대수학
+선형 대수 학 두단어로 나눌 수 있다.
+
+선형적인 공간에서 대수를 다루는 학문이다
+※ 선형적이란 것은 어떤 성질이 변하는데 그 변수가 1차원적이다.
+ 즉 어떤 신호에 기울기만 곱한 형태와 같다는 것.
+이는 직선처럼 똑바른 도형, 또는 그와 비슷한 성질을 갖는 대상을 뜻한다.
+
+대수
+미지수등과 같이 "무언가를 대신하는 수" 라서 대수 이다.
+
+미지수를 가지고 지지고 볶고 하는걸 대수라고 한다.
+
+프로그래밍을 하게 되면은 대수학을 쓸수 밖에 없는것이다.
+우린 대수학을 계속 쓰고 있었던것이다.
+
+선형 이라는것은 선의 형태이다
+
+블랙홀이라든가 오그라지는 형태는 선의 형태가 아니다
+
+3차원 2차원공간은 흔히말하는 선형 공간이다.
+
+※ 유클리드 공간
+![유클리드공간](유클리드공간.png)
+
+서로 직교해서 쭉 뻣어나가는공간이 유클리드 공간이다.
+
+결국엔 유클리드공간이든 선형공간이든 우리는 계속 이공간을 쓰고 있다
+우리는 알게 모르게 쓰고 있다.
+
+선형공간을 다루면서 Vector, Matrix4x4, Quaternion
+
+
+
+### 4) 벡터(Vector) 벡터맨은 핵아재!
+
+(오는데는 순서가 있어도 가는데는 순서가 없다)
+
+
+벡터는 화살표로 생각하면된다
+화살표는 크기, 방향을 가지고 있다.
+어떤곳에는 속도로 나타낼수 있고 위치로 나타낼수 있다.
+
+벡터의 구성요소
+1. 방향
+2. 크기
+
+원점에서 특정 지점
+
+
+x, y가 있는 2차원벡터로 설명.
+
+
+유니티에서 Transform의 position쪽
+
+벡터는 일반숫자와 마찬가지로 덧셈연산을 가지고 있다
+
+※ 벡터는 위에 화살표를 표현해서 이게 벡터다 라는 뜻을 가지고 있음
+벡터를 나타내는 표시가 '화살표'.
+덧셈 = a→ + b→ = (a.x + b.x, a.y + b.y)
+
+평행 사변형의 중간부분의 길이가 벡터
+
+![벡터덧셈](벡터덧셈.png)
+
+
+뺄셈 = a→ - b→ = (a.x - b.x, a.y - b.y)
+
+B벡터에서 A벡터로 향하는 모습이 되고
+벡터는 시작점 끝점 개념이 아니라 크기와 방향만 가지고 있어서
+원점기준에서 봣을때 좌측에 있는 벡터로 표현됨.
+
+3 - 2 =  3 + (-2)
+a→ - b→ = a→ + (-b→)
+이렇게 생각하면 됨.
+
+
+![벡터뺄셈](벡터뺄셈.png)
+
+곱셈, 나눗셈
+
+벡터에는 나눗셈이라는 개념이 없고
+곱셈이라는 개념이 있는데 내적, 외적으로 두가지로 설명됨.
+
+이번 시간에는 안다룸
+
+
+-=벡터의 다른 성질
+1. Length(magnitude)
+(a² + b²)^2 = Length
+
+벡터의 길이를 나타내는 기호(양옆에 짝대기를 두개씩 친다)
+가끔 한개쳐도 통용은 된다. 벡터에 절대값이라는 개념이 없어서
+![백터의마크](백터의마크.png)
+
+2. Normalize(단위화)
+Length를 1로 만드는 과정을 노말라이징
+벡터의 순수한 방향만을 나타내고 싶을때
+
+단위만드는 방법은 
+4/4 = 1 되는 방식으로,
+벡터를 길이로 나누어버리면 길이가 1인 벡터가 나온다
+
+ = (x / 벡터의 길이, y / 벡터의 길이)
+
+![노말라이즈공식](노말라이즈공식.png)
+
+※정리
+vector2 a,b;
+a = b + c;
+a = b - c;
+a.normalize();//단위화, 순수한 방향만을 구해주는
+a.magnitude();//길이를 구해주는
+
+원리를 알고 쓰는거와 모른채로 갔다 쓰는거에는 많은 차이가 있음.
+
+수포자의 생각하는 기준이 사람마다 달라서
+오지현님의 기준은 엄청낮게 잡을것이므로 밑단부터 할 예정
+
+
+### 5) 원주율 π(Pi)! 3.14 이 숫자는 도대체 무슨 의미?!
+
+#### 20230211
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
