--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -83,7 +83,7 @@ https://www.youtube.com/playlist?list=PL-xqYJ8bjgMC-p94R7iXjFCs-znRg93PJ
 
 빗변 = hypotenuse
 제곱 = (ㅊ + 특수문자) => ²  
-루트 = (ㄷ + 특수문자) => ^, √  
+루트(제곱근) = (ㄷ + 특수문자) => ^, √  
 
 1. c² = a² + b²
 2. c²^2 = (a² + b²)^2 (양쪽에 루트를 씌우면)
@@ -241,6 +241,30 @@ a.magnitude();//길이를 구해주는
 ### 5) 원주율 π(Pi)! 3.14 이 숫자는 도대체 무슨 의미?!
 
 #### 20230211
+
+벡터를 애기하다보면 내적연산을 애기할수밖에 없고
+내적을 애기하다보면 삼각함수를 이야기해되고
+삼각함수를 애기해야되고 삼각함수를 이야기하면
+라디안을 애기해야되고 라디안을 이야기하면
+파이를 알고 있어야되고, 이런식으로 엮이고
+엮이고 엮여 있기때문에 파이에 대해 알아서
+벡터까지 알수 있다.
+
+매우 밑바닥부터 차근차근 애기할려고 함
+
+
+
+파이(PI) = 3.14
+
+
+
+
+
+
+
+
+
+
 
 
 
