--- a/lLcrowe/컴퓨터 사이언스공부.md
+++ b/lLcrowe/컴퓨터 사이언스공부.md
@@ -495,8 +495,94 @@ A B 신호두개 C 3개가 와서 여러개가 이어붙혀지면 전가산기
 
 #### 2023..
 
-헉 기억장치에 대한 이해부터 유료임!
+헉 기억장치에 대한 이제부터 유료임!
 
+
+
+#### 20230213
+
+#### 네트워크 데이터 단위 정리 (매우 중요!)
+
+패킷(Packet)
+어떤데이터 덩어리
+
+스트림
+
+IP 수준에서 놀아다니는 수준보다 길어질수 있다
+TCP 수준에서 놀아다니는 단위는 Segment
+IP 수준에서 놀아다니는 단위는 Socket
+
+Stream
+분해 자르기
+
+일정길이의 최대크기
+(MSS)Maximum Segment Size
+
+Packet의 최대크기에 따라 달라짐
+(MTU) Maximum Trans Unit 1500bytes
+
+적어도 천개쯤 나감
+잘게 분해되서 날라감
+
+Frame으로 인캡슐레이션이됨
+
+데이터단위
+1. Socket 수준에서는 Steam데이터. 
+그 끝을 알수 없는 1열로 쭉 나열된 데이터.
+이걸 네트워크로 보낼떄는 분할(Segmention)
+
+2. 분할된 조각 하나가 세그먼트라고 한다
+3. 그걸 인터넷 환경에서 전송가능한 형태로 포장한걸 패킷
+4. 이 패킷을 최대크기는 1500 byte 정도한다.
+5. MSS는 MTU보다 당연히 작다. (상자크기에 들어가야되니까)
+6. 이 패킷을 뿌릴때는 Frame 데이터에 넣는다
+
+![네트워크데이터단위정리](네트워크데이터단위정리.png)
+
+#### 패킷의 생성 원리와 캡슐화
+
+네트워크도 알고 개발도 알아야 설명가능한 구역
+데이터 단위 이야기를 한적이 있다.
+모든 프로그램이라는게 어떤 유저어플프로세스가 있다고하면
+바로 밑에 TCP IP가 있으면 그밑에 디바이스 드라이버가 있고
+맨아래에 네트워크 인터넷 카드가 있어서 유선일 경우
+랜케이블끼어서 인터넷으로 간다.
+
+TCP라는 요소를 유저모드어플프로세스가 접근할수 있도록 추상화한
+인터페이스가 소켓(Socket)이다.
+
+소켓의 본질은 파일(File)의 일종이다
+
+중요한건 데이터단위이다.
+Stream을 쪼개서 Segment들이 있고 
+이걸 Packet으로 만들어서 전송하는데
+Packet 내부는 Header(40byte),Payload(1460byte)로
+Header는 IP(L3, 20byte), TCP(L4, 20byte)
+
+Packet는 택배
+Header가 송장
+Payload가 내용물. Segment가 여기 안에 있음
+
+-=레이어
+Segment L4
+Packet L3
+Frame L2
+
+Packet의 Payload까지 다 뒤지면 
+DPI(Deep Packet Inspection)
+
+![패킷의 생성원리와 캡슐화](패킷의생성원리와캡슐화.png)
+
+
+
+
+
+
+
+
+
+
+#### 20230214
 
 
 
