--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -258,9 +258,262 @@ a.magnitude();//길이를 구해주는
 #### 20230213
 파이는 원주율
 
+
+원주율
+원의 원주에 원주율
+무슨말이냐하면
+
+
 원의크기를 확인할려면 
 
-원의 지름
+원의 지름이 있고 원주는 원의 둘레를 말하는거고
+원주율은 이 원의 지름에 비례해서 원의둘레가 몇이냐
+이런걸 원주율이라고 한다
+원주 == 원의 둘레
+
+바퀴가 있으면 이바퀴의 지름이 1이면
+바퀴가 옆으로 쭉돌아서 한바퀴돌면
+원의 둘레가 표시되는데
+원의 지름이 1일때 원의 둘레의 길이는 3.14f 
+
+
+원의 지름이 1이고 내적하는 육각형을 만들었을때
+
+
+![원을내적하는육각형을만들었을때](원을내적하는육각형을만들었을때.png)
+
+각 길이가 0.5가 된다. 반지름은 0.5이기 때문에  
+그 정삼각형들의 각 선분의 길이는 0.5  
+육각형일때 길이는 3  
+
+
+십이각형은
+
+![십이각형](십이각형.png)
+
+직각삼각형 구역들을  체크 
+
+![육각과십이각에있는직각삼각형구하기](육각과십이각에있는직각삼각형구하기.png)
+
+
+x/y 가 붙어있으면 y분의 x  
+x / y 이면 나누기
+
+x = 3^/4
+
+y =  1/2 - 3^/4
+
+y = (2 - 3^)/4
+
+
+x² = (1/4)²  * ((2 - 3^)/4)²
+
+수학을 할려는거지 산수를 하려는게 아니니까 여기까지 나머지는 계산기로
+
+x = ((1/4)²  * ((2 - 3^)/4)²)^ 
+  = 0.2588.... * 12 
+  = 3.1058....
+
+이렇게 하면서 계속 늘려나가고 이걸 무한히 깍아버리면 원형이 되버린다.
+하지만 완벽한 원형을 만들수가 없다.
+무리수니까
+
+왠만해선
+박스2D 소프트웨어 내는 10~12자리까지만 보고
+우주항공에서도 15자리까지만 써서 생각보다 작게 사용함
+
+우리가 알아야될것은 PI가 정확히 몇이다를 알아야되는게 아니고 
+파이가 어떤것이고 어떤식으로 이루어져있는지 우리한테 어떤의미를 있는건지 알아야되는것이 중요하다.
+
+
+### 6) 라디안(Radian) 대체 이게 뭥미?
+
+세타 미지수
+세타는 일생활해서 쓰지는않고 라디안에서 쓰는것이라서 라디안에 대해서 이야기할려고한다.
+
+Degree, 60분법
+
+수학을 다룰때는 
+호도법
+Radian
+
+호도법 이라는건 
+
+호의 길이로서 특정 각도를 표현하는게 호도 법이다.
+
+정의하기로는
+
+반지름의 길이가 1이고 호의 길이도 1이면 1라디안이라고 정의한다.
+사용하는 단위로는 세타를 사용.
+
+PI = 원주/지름 = (원주 / 2)/(지름 / 2);
+PI = 반원주/반지름
+
+(똑같이 자른다고 결과값이 달라지지않음)
+
+반지름을 1로 두면 반원주는 PI가 된다
+
+PI = 반원주 / 1
+고로 PI는 반원주. 반원주는 180도
+
+이걸 그림으로 표현해보면
+![반원](반원.png)
+
+라디안에서 PI를 이야기하는것은 180도  
+
+180도 = PI  
+360도 = PI * 2  
+90도 =  PI / 2  
+45도 = PI / 4  
+
+돌아와서
+![1라디안그림](1라디안그림.png)
+
+PI = 180도 이고  
+라디안의 정의가 반지름의 길이가 1이고 호(원의 둘레)의 길이도 1 이면 1라디안이니까
+
+※원주(원의둘레) / 2 = 반원주
+
+PI = 반원주/반지름(1) = 180
+1라디안 = 180/PI = 57.2958
+1 = PI/180 = 0.0175라디안
+
+라디안은 각도다
+
+유니티에서 Mathf.Rad2Deg와 Math.Deg2Rad
+
+이런걸 구지 설명하는 이유는 알고 쓰는거랑 모르고 쓰는거랑 상당한 차이가 있으니까
+
+
+
+### 7) 사인과 코사인 (Sin&Cos) part.1 삼각함수의 정확한 의미!?
+
+
+보통 삼각함수를 이야기하면 Sin Cos Tan를 이야기하는데
+오늘은 Sin과 Cos만 이야기할거고  
+Sin과 Cos만 가지고 여러패턴들을 만들수 있다.
+
+
+![삼각함수](삼각함수.png)
+
+Sin이 정확히 어떤의미를 가지고 있는지
+삼각함수를 이야기할때 삼각형이 아닌 원이 나온다
+삼각형과 원은 땔수가 없는 친구들임
+
+반지름이 1인 원을 단위원 이라고함.
+
+
+![Sin](Sin.png)
+
+단위원에서 Sin은  
+타겟팅 잡은 점정을 기준을 반대편을 길이를 Sin이라고 함  
+
+만약 반지름이 1을 넘어섯으면  
+Sin = o/h
+Sin = 빗변/높이
+
+글로쓸때는 Sin Cos 인데  
+읽을때논 싸인 코싸인  
+고로 코싸인은 코 싸인 인건데
+상호보완적인 싸인이다.
+Co 접두어는 함께 뭔가를 하는 무언가를 이야기함  
+
+고로 Sin을 보완해주는게 Cos 이다.
+
+
+이걸 그래프로 나타내면
+
+![싸인코싸인그래프](싸인코싸인그래프.png)
+
+0~1로 움직이고
+Sin을 Y축으로 하고
+Cos을 X축으로 하면은 이렇게 원이 그려짐
+
+
+![Sin Cos그래프원공식](SinCos그래프원공식.png)
+
+3Cos(t) = 3 * Cos(t)
+3 = 원의 반지름
+t = 0 ~ 2PI = 0 ~ 360
+
+2Cos(3t) = 2 * Cos(3 * t)
+
+2 = 원의 반지름
+3 = 돌아가는 스피드
+t = 0 ~ 2PI = 0 ~ 360
+
+
+### 8)사인과 코사인 (Sin&Cos) part.2 유니티 코드 구현
+
+세타는 0, 360, 720 같은 각도라 무한히 늘어나는거 집어넣어도 됨
+![사인코사인코드](사인코사인코드.png)
+
+
+변경완료
+![싸인코싸인커스텀코드](싸인코싸인커스텀코드.png)
+
+### 9)사인과 코사인 (Sin&Cos) part.3
+
+이강의는 사인 코사인이 실제로 어디에 쓰이는지 예를 들어보는 시간.
+전 강의에서는 시각적으로 어떤건지 보여주기 위한 시간이여서
+실제로 게임이 사인코사인이 어덯게 활용되는지 보고싶다는분이 계셔서
+간단한걸로 예를 들겁니다.
+
+빗변 / 높이 = sin
+빗변 / 밑변 = cos 
+
+![그림기억하기1](그림기억하기1.png)
+
+
+벡터의 길이가 1이다.
+즉 노말라이즈가 됫다했을떄
+이 벡터의 x,y좌표는 어덯게 될까
+
+x = cos(theta)  
+y = sin(theta)
+
+![사인코사인3좌](사인코사인3좌.png)
+
+
+
+-게임에 적용한 코드
+
+![총알발사스크립트사진](총알발사스크립트사진.png)
+
+gap = 총알 하나하나의 각도  
+angle = 총알이 갈라지는 최대 각도범위  
+count - 1 = 총알간의 각도. (총알이 4방향으로 나가면 각도는 3부분만 필요하기떄문에 -1)
+startAngle = 계산할 기준 각도
+-angle / 2 를 한이유는 4사분면 음수로 표현해야됨. 최대 앵글을 반으로 나누고 거기서 음수화시킨 각도가 기준각
+
+float theta = startAngle + gap * i;//여기는 각도로만 표현
+theta *= mathf.deg2rad//여기는 각도를 라디안으로 변환
+
+![총알발사사진](총알발사사진.png)
+![총알발사사진2](총알발사사진2.png)
+
+### 10)탄젠트(tangent)
+
+탄젠트의 정의는 sin/cos
+ ![탄젠트정의](탄젠트정의.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
