--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -492,15 +492,180 @@ theta *= mathf.deg2rad//여기는 각도를 라디안으로 변환
 ![총알발사사진](총알발사사진.png)
 ![총알발사사진2](총알발사사진2.png)
 
+
+#### 20230215
+
 ### 10)탄젠트(tangent)
+
 
 탄젠트의 정의는 sin/cos
  ![탄젠트정의](탄젠트정의.png)
 
+tangent(theta) = sin(theta) / cos(theta)
+tangent(theta) = 기울기 = y / x = sin(theta) / cos(theta)
 
 
+tangent는 **기울기** 라는 컨셉만 기억하면 된다.
 
 
+![탄젠트는기울기](탄젠트는기울기.png)
+
+기울기를 표현할때 탄젠트가 아니라 엄밀히말하면 역삼각함수가 필요하다
+
+theta = arcsin y
+theta = arccos y
+theta = arctan y
+
+역삼각함수는
+tangent(theta) = y 다 이랬을때 이 역함수는 그 반대로 만들어버림.
+y가 sin
+인풋과 아웃풋이 있었을때 그 인풋과 아웃풋을 바꿔버림
+
+아크탄젠트 * y = 각도
+
+라디안값으로 반환됨 = mathf.Atan(dir.y, dir.x);
+
+
+### 11)벡터의 내적 (dot product) part.1 feat. 코사인법칙
+
+벡터의 뺄셈과 덧셈을 다루었으니 이제 곱셈을 다룰차례인데
+벡터의 곱셈은 두가지 컨셉이 있다. 하나는 **내적**이고 하나는 **외적**
+그중에 내적에 대해서 말할려고함
+
+벡터의 내적은 벡터의 곱셈이다. 그래서 점으로 표시한다.
+점으로 표시하기때문에 Dot Product 라고 부르고
+곱셈을 할때 a점 b점 이라고 쓰는데 이걸 줄여서 ab라고 줄여서 쓰고
+근데 벡터의 내적 점은 생략할수가 없다
+a * b == 벡터a * 벡터b * Cos(theta) ==
+vector a, b;
+(a.x * b.x) + (a.y * b.y) + (a.z * b.z)  (3차원)
+(a.x * b.x) + (a.y * b.y)  (2차원)
+
+각각 성분의 곱하고 더한게 내적이 된다.
+
+![벡터의내적](벡터의내적.png)
+
+
+벡터의 내적은 벡터간의 투영된 길이도 나타내는 의미도 가짐.
+벡터의 내적은 두벡터간의 각도를 얻어올수 있는 방법이 된다.
+
+벡터간의 각도는 여러모로 활용되는데
+예를 들어 액션게임에서 캐릭터가 몬스터를 때렸다하면 같은방향을 보냐 반대방향을 보냐
+판단하는 척도를 세울수 있고
+
+세이더에서는 조명공식에서 기본으로 사용됨.
+
+제 1코사인법칙
+![제1코사인법칙](제1코사인법칙.png)
+
+![제1코사인법칙계산법](제1코사인법칙계산법.png)
+
+
+제 2코사인법칙
+a² = b² + c² - 2bc cos(A) 
+
+
+복잡해보이지만 코사인1법칙을 확장한것
+![코사인12법칙](코사인12법칙.png)
+
+
+최종으로
+(대문자 == 점정, 소문자 == 선분)
+1법칙 
+a = bcos(C) + ccos(B)
+b = ccos(A) + acos(C)
+c = bcos(A) + acos(B)
+
+2법칙
+a² = b² + c² -2bc cos(A)
+b² = c² + a² -2ca cos(B)
+c² = a² + b² -2ab cos(C)
+
+
+### 12)벡터의 내적 (dot product) part.2
+중고딩때 수학을 완전 포기했던 수포자였슴다. 수학은 항상찍었다.
+게임개발을 시작하면서 인터넷을 뒤지고 책보면서 공부했다
+수학을 안했던걸 생각해보니까. 학교에서는 수학을 암기과목으로 가르친다.
+공식알려주고 왜 그러는지 안알려줌.
+그래서 이 비디오 시리즈를 진행하면서 진도, 템포가 떨어져도 최대한 이해하기 쉽게
+개념을 설명할려고 한다.
+
+벡터의 내적 공식이 어덯게 나오는지 설명할려고함
+vector a, b;
+a * b cos(theta)  => 세이더에서 이걸 주로 씀  
+a.x * b.x + a.y * b.y + a.z * b.z => 함수 오버헤드가 있어서 이걸 주로씀  
+
+---
+벡터의 내적은 벡터의 곱셈 이고.
+벡터의 덧셈과 뺄셈은 벡터가 나오지만
+벡터의 곱셈은 스칼라가 나오는 버전이 있기도하고 벡터가 나오는 버전이 있다.
+`그래서 벡터의 내적은 벡터의 곱셈인데 스칼라로 나오는 버전이다.`
+(스칼라는 scale에서 파생된 단어)
+
+기본 개념은 여기서 출발한다.
+a * a = a²; 마찬가지로 a↑ * a↑ = a↑²;
+
+![내적공통체크1](내적공통체크1.png)
+![내적공통체크2](내적공통체크2.png)
+
+---
+
+### 내적의 증명/유도 1번
+a * b  = a↑ * b↑ * cos(theta)
+벡터a 와 b 의 내적 == a의길이 * b의길이 * cos(theta)
+
+---
+이런 특성을 벡터 a, b 의 길이가 1인 상태 (노말라이즈(0~1)된상태)
+이렇게 되면 그냥 cos(theta)가 됨.
+
+1. 두벡터가 같은방향을 바라보고 있는것
+theta = 0도 => 벡터a,b = 1
+
+2. 두벡터가 90도. 수직을 이루고 있으면
+theta = 90도 => 벡터a,b = 0
+
+3. 두벡터가 서로 반대방향을 보고 있으면
+theta = 180도 => 벡터a,b = -1
+
+이라는 결과로 나옴
+
+---
+
+
+### 내적의 증명/유도 2번
+파티고라스의 법칙을 체크
+![내적피타고라스유도](내적피타고라스유도.png)
+
+a * a = ax * ax + ay * ay;
+
+a중에 하나를 b로 바꾸면
+a * b = ax * bx + ay * by;
+
+이렇게 하면 내적의 공식이 나옴
+ 
+---
+
+
+### 13)벡터의 내적 (dot product) 응용 1. 벡터의 곱셈
+
+
+같은방향인지 다른방향인 내적을 통해서 알수가 있다
+
+1이면 같은 방향 0이면 수직 -1이면 반대반향 이라는 특성을 사용함
+
+총알을 진행방향을 노말라이즈, 현재오브젝트의 방향 을 내적해서
+0보다 높으면 전방을 보이니까 맞았다고 체크
+
+`Vector.Dot(총알을 진행방향을 노말라이즈, 현재오브젝트의 방향) > 0;`
+
+앞면뒷면을 찾을떄 딱좋아보임
+
+## ※지금까지 소감. 오..늘고 있는게 확실히 느껴짐
+이제부터는 그래픽쪽도 같이 봐야할듯
+
+#### 20230216
+
+### 14)셰이더 라이팅의 기본! 벡터의 내적 (dot product) 응용
 
 
 
