--- a/lLcrowe/그래픽 랜더링 파이프라인 (3D그래픽스)(DX11) 공부.MD
+++ b/lLcrowe/그래픽 랜더링 파이프라인 (3D그래픽스)(DX11) 공부.MD
@@ -46,3 +46,95 @@ DX12가 더 분리되있어서 최적화는 DX12가 쉽다.
 ---
 #### 20230216
 15일에 수포자게임쪽 내적까지 진행되서 이제 여기쪽도 공부시작
+자잘한건 넘어가고 보기
+
+## 랜더링의 기본원리
+
+컴퓨터그래픽스의 세부분야들
+1. 지오매트릭 모델링(기하모델링)
+2. 랜더링 
+3. 애니메이션
+4. 이미지처리 
+등등
+
+컴퓨터그래픽스하면 떠오르는 기술은
+멋진영상을 만드는 랜더링 이다.
+
+render이라는 영어단어는 표현, 묘사
+컴퓨터그래픽스는  컴퓨터그래픽스 알고리즘을 이용해서 디스플레이장치에 보여주는 걸 랜더링
+
+픽셀색깔 빨주파 RGB를 이용함
+바둑판 구조의 픽셀의 색을 결정해서 원하는 영상을 표현하는것을 래스터그래픽스
+결국 랜더링은 디스플레이장치에서 보여주는 여러가지색의 픽셀을 어덯게 보여주는가 문제
+
+3차원에 있는 물체를 꽉눌려서 2차원으로 표현
+어떤형태를 컴퓨터가 이해할수있는 디지털정보로 전달
+컴퓨터그래픽스에서는 3차원모델을 삼각형으로 표현하는걸 선호
+3D모델을 이루고 있는 삼각형을 하나하나 2차원으로 표현
+이때 삼각형안의 포함되고 있는 색깔을 결정할떄 사용하는기술을 쉐이딩.
+
+
+### 가장 전통적으로 사용하는 쉐이딩
+퐁(Phong) 쉐이딩 == Ambient(환경광, 광원과 상관없이 물체자체의 색) Diffuse(난반사, 정반사 그주변) Specular(정반사, 하이라이트) = Phong Reflection
+
+![퐁쉐이딩](퐁쉐이딩.png)
+
+-=물리기반랜더링(PBR)
+최근에 굉장히 다양한 재질들을 사실적으로 표현하는기술들이 널리사용됨
+
+-=텍스처링
+3차원모델 위에 사진(Texture)을 덮씌워서 실질적인 결과물을 만듬
+
+-=래스터화의 장점과 단점
+장점 : 여러삼각형들을 독립적으로 그리기때문에 빠르다
+단점 : 여러물체들의 상호적용을 고려하기 어렵다
+
+실시간 3차원 게임에서는 빠른속도를 얻기 위해서 래스터방식을 기본으로 사용함.
+대신에 영상의 사실성을 높이기 위해서는  추가적인 노력을 많이 기울여야합니다.
+
+-=레이트레이싱(광추적 기법)
+
+눈으로 들어오는 빛을 역추적하는걸 의미함
+반사광에 의한 간접조명처리가 어렵다
+
+
+-=전역 조명(Global illumination)
+
+복사 측정술 (Radiometry, radiosity)
+가상세계를 여러개의 조각조각으로 나누어놓고 이조각들이 빛을 어덯게 주고받는지
+어덯게 반사해놓고 흡수하는지 한번에 계산해놉니다.
+단점은 매우느리다.
+
+레이트레이싱을 사실성을 보완해주는 것중 대표적인건 포톤매핑이다.
+광원에서 포톤이라는거라고 불리는 빛에너지를 가지고 있는 여러입자를 쏴주고
+그입자들이 가지고 있는 정보를 활용해서 레이트레이싱이 닿지 못하는 간접조명효과를
+만들어낼수 있도록 도와주는 기술
+
+-=장점
+방안에 들어온 빛에너지가 줄어듬.  
+전방적으로 더 밝아지는 간적접인 조명효과를 나타나는 결과를 얻을수 있음.  
+커스틱스 라고 불리는 투명한물체에 의해서 빛에너지가 집중되는 현상도 쉽게 구현됨
+불과 같이 그자체가 빛을내는 간접광효과도 자연스럽게 추적할수 있음.
+
+
+### 랜더링의 미래
+고품질 랜더링에 대한 수요는 점점 늘어남
+래스터라이제이션을 사용하는 이유가 속도떄문이라고 말했고 
+래스터라이제이션을 사용한 그래프파이프라인에서는 투명한물체, 그림자라든지를 
+추가적으로 구현해야하는 부담이 있다.
+
+최근에 빠르게 발달하는 하드웨어덕분에
+이제는 레이트레이싱을 실시간으로 해서 이러한 다양한효과들을 자연스럽게 현실적인 영상으로 
+담아내는 기술이 발당하고 있음
+랜더링에 인공지능기술을 집어넣어서 좀더 자연스럽게 만듬
+불쾌함을 골짜기를 넘을정도로 잘 만들어졋기떄문에 아주좋음
+
+
+#### 20230216
+### 3. 컴퓨터 애니메이션의 다양한 기술들
+
+
+
+
+
+
