--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -81,7 +81,7 @@ https://www.youtube.com/playlist?list=PL-xqYJ8bjgMC-p94R7iXjFCs-znRg93PJ
 더짜증나는건 이것들을 영어로 알고 있어야된다.  
 자료를 찾아보면 다 영어로 되있음.  
 
-빗변 = hypotenuse
+빗변 = hypotenuse = c
 제곱 = (ㅊ + 특수문자) => ²  
 루트(제곱근) = (ㄷ + 특수문자) => ^, √  
 
@@ -667,17 +667,88 @@ a * b = ax * bx + ay * by;
 
 ### 14)셰이더 라이팅의 기본! 벡터의 내적 (dot product) 응용
 
+벡터의 또 다른 응용에 대해서 이야기 해보는 강의
+
+
+![코사인세타를이용하는](코사인세타를이용하는.png)
+
+
+cos(theta)가 라이팅처리에서 사용됨.  
+내적을 개념은 게임을 포함한 그래픽스랜더링에서 특히 라이팅처리에서 핵심적인 역할을 함  
+
+빛의 량을 1이라고 가정하고 크기도 1이라고 가정하면
+
+수직 = 1
+45도일시 = 길이가 어느정도로 길어지는지 체크
+
+
+![라이팅45도계산](라이팅45도계산.png)
+
+비율이 같으니까
+
+x : 1 = 1 : cos(theta)
+x / 1 = 1 / cos(theta)
+x = 1 / cos(theta)
+
+
+노란 삼각형안에 파란삼각형을 그린후 
+이 파란삼각형의 빗변의 길이가 1이고
+밑변의 길이는 cos(theta)
+
+※ 또나옴 외우자  
+sin = y = 높이 = height  
+cos = x = 밑변 = width  
+
+![동일한이유](동일한이유.png)
 
 
 
+1 / cos(45) = 약1.4  
+cos(theta) 사용
+
+![45도시길이](45도시길이.png)
+
+
+에너지 보존의 법칙
+접촉이 없을때 고립계에서 `에너지의 총합은 일정하다.`
+
+일정한 량의 빛이 들어왔을때 빛이라는 에너지를 받는 면적이 좁으면 밝아지고
+넓어지면 어두워지는거
+
+※ 빛이 닿는 면적 = 1 / cos(theta)
+
+빛이 닿는 면적의 밝기
+= 1 / 빛이 닿는 면적
+= 1 / (1 / cos(theta))
+= cos(theta)
+
+결국은 빛이라는 면적에 대한 밝기는 Cos(theta).
+
+
+그래서 그래픽스에서 라이트연산에서 내적을 사용
+
+빛을 봐라보는 벡터 = Light벡터  
+면의 방향에 대한 노말벡터  
+를 내적한 값을 라이팅결과로 사용  
+
+![라이팅연산에내적사용](라이팅연산에내적사용.png)
+
+
+빛을 완전히 봐라보는 방향은 1이 나오고  
+45도는 약 0.7로 밝기로나옴  
+0.5가 아닌 Cos값인 0.7로 나옴  
 
 
 
+![내적에대한빛량](내적에대한빛량.png)
+
+
+이러한 내적을 쉐이더에서 직접사용가능
 
 
 
-
-
+벡터의 내적을 다루고 나서는 벡터의 외적으로 넘어가야되는데
+벡터의 외적을 제대로 이해할려면 행렬을 다루어야됨.
 
 
 
