--- a/lLcrowe/그래픽 랜더링 파이프라인 (3D그래픽스)(DX11) 공부.MD
+++ b/lLcrowe/그래픽 랜더링 파이프라인 (3D그래픽스)(DX11) 공부.MD
@@ -130,8 +130,81 @@ render이라는 영어단어는 표현, 묘사
 불쾌함을 골짜기를 넘을정도로 잘 만들어졋기떄문에 아주좋음
 
 
-#### 20230216
+#### 20230217
 ### 3. 컴퓨터 애니메이션의 다양한 기술들
+
+컴퓨터애니메이션에서 사용되는 다양한 기술들
+
+애니메이션의 기본적인 원리는
+여러가지 이미지들을 빠른속도로 바꿔가서  
+보여주면 움직이는 영상을 보여주는거 같은  
+착각을 느끼게되는것  
+
+최근엔 컴퓨터로 그리면서 높은 품질의 애니메이션을 그릴수가 있음
+
+
+-=키프레임 애니메이션
+한장한장 그린이미지를 빠르게 바꿔가면서 그려주는 애니메이션.  
+키프레임 사이 채움.  
+중요한 키프레임만 만들어두고 나머지는 포간법을 사용해서 그리는게 일반적.  
+
+-==물리기반 애니메이션
+-=입자시스템(Particle System)
+물리법칙에 따라 시뮬레이션을 해서 폭넓은 애니메이션을 만들수 있음
+
+굉장히 다양하게 응용되서 사용됨
+
+-=강체 시뮬레이션(Rigid Body Simulation)
+모양이 변하지 않는 물체들을 시뮬레이션할때 사용됨
+중요한건 충돌감지(Collision Detection). 레이트레이싱.  
+게임이나 영화에서 스팩타클한 장면을 연출할때 사용됨
+충돌감지를 어덯게 잘 감지하고 시뮬레이션을 효율적으로 하는가
+
+-=변형체 시뮬레이션(Deformable Simulation)
+어떤 물체를 부피전체를 아주 자그만한 조각들로 쪼개고
+그 조각들이 어덯게 상호작용을 하는지를 물리방적식에 따라서 시뮬레이션함
+
+
+-=옷감 시뮬레이션(Cloth Simulation)
+변형체 시뮬레이션과 비슷한데 평면을 매우작은 스프링들의 조합으로 생각해서
+옷감과 비슷하게 시뮬레이션
+
+-=머리카락 시뮬레이션
+옷감시뮬레이션을 사용해서 머리카락도 사용함
+
+-=유체 시뮬레이션
+물, 자연환경등
+
+-=연속체 시뮬레이션
+눈을 시뮬레이션
+
+-=캐릭터애니메이션
+인간의 골격을 계층구조로 모델링을하고(Hierarachical Structure)
+그위에 피부를 입혀서 애니메이션을 한다(Skinned Mesh)
+일정자동적으로 계산해서 애니메이터의 작업을 줄여주는데 도움. 역기구학(Inverse Kinemactics)
+최근에는 모션캡쳐를 활용하고 있음
+
+-=얼굴애니메이션
+얼굴 표정을 애니메이션화
+
+-=뉴럴애니메이션
+캡처하지않은 애니메이션동작들도 자동적으로 개발할수 있게 제작
+
+-=행동양식 애니메이션
+대규모의 군중시뮬레이션을 사용할떄
+
+
+#### 20230218
+
+대기 음.. 뭔가 개념만 알고 가야될거 같다.
+연출을 원하는데 좀더 밑단부분임
+여기서 중지
+
+
+
+
+
+
 
 
 
