--- a/lLcrowe/수포자를 위한 수학.md
+++ b/lLcrowe/수포자를 위한 수학.md
@@ -656,7 +656,13 @@ a * b = ax * bx + ay * by;
 총알을 진행방향을 노말라이즈, 현재오브젝트의 방향 을 내적해서
 0보다 높으면 전방을 보이니까 맞았다고 체크
 
-`Vector.Dot(총알을 진행방향을 노말라이즈, 현재오브젝트의 방향) > 0;`
+게임오브젝트에서 총알을 감지할떄 
+OnTriggerEnter2D  
+{  
+    `if( Vector.Dot(총알을 진행방향을 노말라이즈, 현재오브젝트의 방향) > 0);`  
+}
+
+![내적정면후면체크정리](내적정면후면체크정리.png)
 
 앞면뒷면을 찾을떄 딱좋아보임
 
@@ -755,7 +761,9 @@ cos(theta) 사용
 
 
 
+#### 20230217
 
+### 15)행렬 (Matrix) 소개와 곱셈. 매트릭스 알면 핵아재!
 
 
 
